@@ -1,42 +1,49 @@
 package mekanism.client.render.lib;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
 import mekanism.common.lib.Color;
 import mekanism.common.lib.math.Quaternion;
+import net.minecraft.client.renderer.LightTexture;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
-import net.minecraft.util.Direction;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.vector.Vector3d;
+import net.minecraft.core.Direction;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.phys.Vec3;
 
 public interface QuadTransformation {
 
     // down up north south west east
-    Direction[][] ROTATION_MATRIX = new Direction[][]{{Direction.SOUTH, Direction.NORTH, Direction.DOWN, Direction.DOWN, Direction.DOWN, Direction.DOWN},
-                                                      {Direction.NORTH, Direction.SOUTH, Direction.UP, Direction.UP, Direction.UP, Direction.UP},
-                                                      {Direction.DOWN, Direction.UP, Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST},
-                                                      {Direction.UP, Direction.DOWN, Direction.SOUTH, Direction.NORTH, Direction.EAST, Direction.WEST},
-                                                      {Direction.WEST, Direction.WEST, Direction.WEST, Direction.EAST, Direction.SOUTH, Direction.NORTH},
-                                                      {Direction.EAST, Direction.EAST, Direction.EAST, Direction.WEST, Direction.NORTH, Direction.SOUTH}};
+    Direction[][] ROTATION_MATRIX = {{Direction.SOUTH, Direction.NORTH, Direction.DOWN, Direction.DOWN, Direction.DOWN, Direction.DOWN},
+                                     {Direction.NORTH, Direction.SOUTH, Direction.UP, Direction.UP, Direction.UP, Direction.UP},
+                                     {Direction.DOWN, Direction.UP, Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST},
+                                     {Direction.UP, Direction.DOWN, Direction.SOUTH, Direction.NORTH, Direction.EAST, Direction.WEST},
+                                     {Direction.WEST, Direction.WEST, Direction.WEST, Direction.EAST, Direction.SOUTH, Direction.NORTH},
+                                     {Direction.EAST, Direction.EAST, Direction.EAST, Direction.WEST, Direction.NORTH, Direction.SOUTH}};
 
-    QuadTransformation identity = q -> {
-    };
+    QuadTransformation identity = q -> false;
 
-    QuadTransformation fullbright = light(1);
+    QuadTransformation fullbright = packedLight(LightTexture.FULL_BRIGHT);
     QuadTransformation filtered_fullbright = TextureFilteredTransformation.of(fullbright, rl -> rl.getPath().contains("led"));
 
     static QuadTransformation color(Color color) {
         return new ColorTransformation(color);
     }
 
-    static QuadTransformation light(float light) {
+    static QuadTransformation light(int light) {
         return new LightTransformation(light, light);
     }
 
-    static QuadTransformation translate(Vector3d translation) {
+    static QuadTransformation packedLight(int light) {
+        return new LightTransformation(LightTexture.block(light), LightTexture.sky(light));
+    }
+
+    static QuadTransformation translate(double xTranslation, double yTranslation, double zTranslation) {
+        return translate(new Vec3(xTranslation, yTranslation, zTranslation));
+    }
+
+    static QuadTransformation translate(Vec3 translation) {
         return new TranslationTransformation(translation);
     }
 
@@ -44,20 +51,14 @@ public interface QuadTransformation {
         if (side == null) {
             return identity;
         }
-        switch (side) {
-            case UP:
-                return rotate(90, 0, 0);
-            case DOWN:
-                return rotate(-90, 0, 0);
-            case WEST:
-                return rotate(0, 90, 0);
-            case EAST:
-                return rotate(0, -90, 0);
-            case SOUTH:
-                return rotate(0, 180, 0);
-            default:
-                return identity;
-        }
+        return switch (side) {
+            case UP -> rotate(90, 0, 0);
+            case DOWN -> rotate(-90, 0, 0);
+            case WEST -> rotate(0, 90, 0);
+            case EAST -> rotate(0, -90, 0);
+            case SOUTH -> rotate(0, 180, 0);
+            default -> identity;
+        };
     }
 
     static QuadTransformation rotateY(double degrees) {
@@ -80,11 +81,23 @@ public interface QuadTransformation {
         return new TextureTransformation(texture);
     }
 
+    //Bounds 0 to 16
+    static QuadTransformation uvShift(float uShift, float vShift) {
+        return new UVTransformation(uShift, vShift);
+    }
+
     static QuadTransformation list(QuadTransformation... transforms) {
         return TransformationList.of(transforms);
     }
 
-    void transform(Quad quad);
+    /**
+     * Transforms the given quad.
+     *
+     * @param quad Quad to transform.
+     *
+     * @return {@code true} if the quad was changed.
+     */
+    boolean transform(Quad quad);
 
     default QuadTransformation and(QuadTransformation other) {
         return list(this, other);
@@ -94,26 +107,33 @@ public interface QuadTransformation {
 
         private final Direction side;
 
-        public SideTransformation(Direction side) {
+        protected SideTransformation(Direction side) {
             this.side = side;
         }
 
         @Override
-        public void transform(Quad quad) {
-            if (side == null) {
-                return;
+        public boolean transform(Quad quad) {
+            if (side != null) {
+                Direction newSide = ROTATION_MATRIX[quad.getSide().ordinal()][side.ordinal()];
+                if (newSide != quad.getSide()) {
+                    quad.setSide(newSide);
+                    return true;
+                }
             }
-            quad.setSide(ROTATION_MATRIX[quad.getSide().ordinal()][side.ordinal()]);
+            return false;
         }
 
         @Override
-        public boolean equals(Object other) {
-            return other instanceof SideTransformation && side == ((SideTransformation) other).side;
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof SideTransformation other && side == other.side;
         }
 
         @Override
         public int hashCode() {
-            return side != null ? side.hashCode() : -1;
+            return side == null ? -1 : side.hashCode();
         }
     }
 
@@ -121,18 +141,22 @@ public interface QuadTransformation {
 
         private final Color color;
 
-        public ColorTransformation(Color color) {
+        protected ColorTransformation(Color color) {
             this.color = color;
         }
 
         @Override
-        public void transform(Quad quad) {
+        public boolean transform(Quad quad) {
             quad.vertexTransform(v -> v.color(color));
+            return true;
         }
 
         @Override
-        public boolean equals(Object other) {
-            return other instanceof ColorTransformation && color.equals(((ColorTransformation) other).color);
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof ColorTransformation other && color.equals(other.color);
         }
 
         @Override
@@ -143,22 +167,26 @@ public interface QuadTransformation {
 
     class LightTransformation implements QuadTransformation {
 
-        private final float lightU;
-        private final float lightV;
+        private final int lightU;
+        private final int lightV;
 
-        public LightTransformation(float lightU, float lightV) {
+        public LightTransformation(int lightU, int lightV) {
             this.lightU = lightU;
             this.lightV = lightV;
         }
 
         @Override
-        public void transform(Quad quad) {
+        public boolean transform(Quad quad) {
             quad.vertexTransform(v -> v.light(lightU, lightV));
+            return true;
         }
 
         @Override
-        public boolean equals(Object other) {
-            return other instanceof LightTransformation && lightU == ((LightTransformation) other).lightU && lightV == ((LightTransformation) other).lightV;
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof LightTransformation other && lightU == other.lightU && lightV == other.lightV;
         }
 
         @Override
@@ -174,25 +202,29 @@ public interface QuadTransformation {
 
         private final Quaternion quaternion;
 
-        public RotationTransformation(Quaternion quaternion) {
+        protected RotationTransformation(Quaternion quaternion) {
             this.quaternion = quaternion;
         }
 
         @Override
-        public void transform(Quad quad) {
+        public boolean transform(Quad quad) {
             quad.vertexTransform(v -> {
                 v.pos(round(quaternion.rotate(v.getPos().subtract(0.5, 0.5, 0.5)).add(0.5, 0.5, 0.5)));
-                v.normal(round(quaternion.rotate(v.getNormal()).normalize()));
+                v.normal(round(quaternion.rotate(v.getNormalD()).normalize()));
             });
+            return true;
         }
 
-        private static Vector3d round(Vector3d vec) {
-            return new Vector3d(Math.round(vec.x * EPSILON) / EPSILON, Math.round(vec.y * EPSILON) / EPSILON, Math.round(vec.z * EPSILON) / EPSILON);
+        private static Vec3 round(Vec3 vec) {
+            return new Vec3(Math.round(vec.x * EPSILON) / EPSILON, Math.round(vec.y * EPSILON) / EPSILON, Math.round(vec.z * EPSILON) / EPSILON);
         }
 
         @Override
-        public boolean equals(Object other) {
-            return other instanceof RotationTransformation && quaternion.equals(((RotationTransformation) other).quaternion);
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof RotationTransformation other && quaternion.equals(other.quaternion);
         }
 
         @Override
@@ -203,20 +235,24 @@ public interface QuadTransformation {
 
     class TranslationTransformation implements QuadTransformation {
 
-        private final Vector3d translation;
+        private final Vec3 translation;
 
-        public TranslationTransformation(Vector3d translation) {
+        protected TranslationTransformation(Vec3 translation) {
             this.translation = translation;
         }
 
         @Override
-        public void transform(Quad quad) {
+        public boolean transform(Quad quad) {
             quad.vertexTransform(v -> v.pos(v.getPos().add(translation)));
+            return true;
         }
 
         @Override
-        public boolean equals(Object other) {
-            return other instanceof TranslationTransformation && translation.equals(((TranslationTransformation) other).translation);
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof TranslationTransformation other && translation.equals(other.translation);
         }
 
         @Override
@@ -225,31 +261,72 @@ public interface QuadTransformation {
         }
     }
 
-    class TextureTransformation implements QuadTransformation {
+    class UVTransformation implements QuadTransformation {
 
-        private final TextureAtlasSprite texture;
+        private final float uShift;
+        private final float vShift;
 
-        public TextureTransformation(TextureAtlasSprite texture) {
-            this.texture = texture;
+        protected UVTransformation(float uShift, float vShift) {
+            this.uShift = uShift;
+            this.vShift = vShift;
         }
 
         @Override
-        public void transform(Quad quad) {
-            if (texture == null) {
-                return;
+        public boolean transform(Quad quad) {
+            //TODO: At some point we may want to add in some form of validation here about bounds and stuff
+            TextureAtlasSprite texture = quad.getTexture();
+            float uMin = texture.getU0(), uMax = texture.getU1();
+            float vMin = texture.getV0(), vMax = texture.getV1();
+            //Calculate how much of a shift it is based on the texture's scale
+            float uShift = this.uShift * (uMax - uMin) / 16F;
+            float vShift = this.vShift * (vMax - vMin) / 16F;
+            quad.vertexTransform(v -> v.texRaw(v.getTexU() + uShift, v.getTexV() + vShift));
+            return true;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
             }
-            QuadUtils.remapUVs(quad, texture);
-            quad.setTexture(texture);
-        }
-
-        @Override
-        public boolean equals(Object other) {
-            return other instanceof TextureTransformation && texture == ((TextureTransformation) other).texture;
+            return o instanceof UVTransformation other && Float.compare(other.uShift, uShift) == 0 && Float.compare(other.vShift, vShift) == 0;
         }
 
         @Override
         public int hashCode() {
-            return texture != null ? texture.hashCode() : -1;
+            return Objects.hash(uShift, vShift);
+        }
+    }
+
+    class TextureTransformation implements QuadTransformation {
+
+        private final TextureAtlasSprite texture;
+
+        protected TextureTransformation(TextureAtlasSprite texture) {
+            this.texture = texture;
+        }
+
+        @Override
+        public boolean transform(Quad quad) {
+            if (texture != null && quad.getTexture() != texture) {
+                QuadUtils.remapUVs(quad, texture);
+                quad.setTexture(texture);
+                return true;
+            }
+            return false;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof TextureTransformation other && texture == other.texture;
+        }
+
+        @Override
+        public int hashCode() {
+            return texture == null ? -1 : texture.hashCode();
         }
     }
 
@@ -258,7 +335,7 @@ public interface QuadTransformation {
         private final QuadTransformation original;
         private final Predicate<ResourceLocation> verifier;
 
-        public TextureFilteredTransformation(QuadTransformation original, Predicate<ResourceLocation> verifier) {
+        protected TextureFilteredTransformation(QuadTransformation original, Predicate<ResourceLocation> verifier) {
             this.original = original;
             this.verifier = verifier;
         }
@@ -268,15 +345,16 @@ public interface QuadTransformation {
         }
 
         @Override
-        public void transform(Quad quad) {
-            if (verifier.test(quad.getTexture().getName())) {
-                quad.transform(v -> original.transform(quad));
-            }
+        public boolean transform(Quad quad) {
+            return verifier.test(quad.getTexture().getName()) && original.transform(quad);
         }
 
         @Override
-        public boolean equals(Object other) {
-            return other instanceof TextureFilteredTransformation && verifier.equals(((TextureFilteredTransformation) other).verifier);
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof TextureFilteredTransformation other && verifier.equals(other.verifier);
         }
 
         @Override
@@ -290,23 +368,22 @@ public interface QuadTransformation {
         private final List<QuadTransformation> list;
         private final int hashCode;
 
-        public TransformationList(List<QuadTransformation> list) {
+        protected TransformationList(List<QuadTransformation> list) {
             this.list = list;
             hashCode = list.hashCode();
         }
 
         public static TransformationList of(QuadTransformation... trans) {
-            return new TransformationList(Arrays.asList(trans));
+            return new TransformationList(List.of(trans));
         }
 
         @Override
-        public void transform(Quad quad) {
-            list.forEach(transformation -> transformation.transform(quad));
-        }
-
-        @Override
-        public boolean equals(Object other) {
-            return other instanceof TransformationList && list.equals(((TransformationList) other).list);
+        public boolean transform(Quad quad) {
+            boolean transformed = false;
+            for (QuadTransformation transformation : list) {
+                transformed |= transformation.transform(quad);
+            }
+            return transformed;
         }
 
         @Override
@@ -314,6 +391,14 @@ public interface QuadTransformation {
             List<QuadTransformation> newList = new ArrayList<>(list);
             newList.add(other);
             return new TransformationList(newList);
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (o == this) {
+                return true;
+            }
+            return o instanceof TransformationList other && list.equals(other.list);
         }
 
         @Override
