@@ -1,55 +1,80 @@
 package mekanism.client.render.lib;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
-import net.minecraft.client.renderer.model.BakedQuad;
+import net.minecraft.client.renderer.block.model.BakedQuad;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 
 public class QuadUtils {
 
+    private QuadUtils() {
+    }
+
     private static final float eps = 1F / 0x100;
 
     public static List<Quad> unpack(List<BakedQuad> quads) {
-        return quads.stream().map(Quad::new).collect(Collectors.toList());
+        return quads.stream().map(Quad::new).toList();
     }
 
     public static List<BakedQuad> bake(List<Quad> quads) {
-        return quads.stream().map(Quad::bake).collect(Collectors.toList());
+        return quads.stream().map(Quad::bake).toList();
     }
 
     public static List<Quad> flip(List<Quad> quads) {
-        return quads.stream().map(Quad::flip).collect(Collectors.toList());
+        return quads.stream().map(Quad::flip).toList();
     }
 
     public static List<Quad> transformQuads(List<Quad> orig, QuadTransformation transformation) {
-        return orig.stream().peek(transformation::transform).collect(Collectors.toList());
+        List<Quad> list = new ArrayList<>(orig.size());
+        for (Quad quad : orig) {
+            transformation.transform(quad);
+            list.add(quad);
+        }
+        return list;
     }
 
     public static List<BakedQuad> transformBakedQuads(List<BakedQuad> orig, QuadTransformation transformation) {
-        return orig.stream().map(Quad::new).peek(transformation::transform).map(Quad::bake).collect(Collectors.toList());
+        List<BakedQuad> list = new ArrayList<>(orig.size());
+        for (BakedQuad bakedQuad : orig) {
+            Quad quad = new Quad(bakedQuad);
+            if (transformation.transform(quad)) {
+                //If the transformation actually changed the quad bake it again
+                list.add(quad.bake());
+            } else {
+                // otherwise, just add the original quad so that we can have a lower memory impact
+                list.add(bakedQuad);
+            }
+        }
+        return list;
     }
 
     public static List<BakedQuad> transformAndBake(List<Quad> orig, QuadTransformation transformation) {
-        return orig.stream().peek(transformation::transform).map(Quad::bake).collect(Collectors.toList());
+        List<BakedQuad> list = new ArrayList<>(orig.size());
+        for (Quad quad : orig) {
+            transformation.transform(quad);
+            list.add(quad.bake());
+        }
+        return list;
     }
 
     public static void remapUVs(Quad quad, TextureAtlasSprite newTexture) {
-        float uMin = quad.getTexture().getMinU(), uMax = quad.getTexture().getMaxU();
-        float vMin = quad.getTexture().getMinV(), vMax = quad.getTexture().getMaxV();
-        for (Vertex v : quad.getVertices()) {
+        TextureAtlasSprite texture = quad.getTexture();
+        float uMin = texture.getU0(), uMax = texture.getU1();
+        float vMin = texture.getV0(), vMax = texture.getV1();
+        quad.vertexTransform(v -> {
             float newU = (v.getTexU() - uMin) * 16F / (uMax - uMin);
             float newV = (v.getTexV() - vMin) * 16F / (vMax - vMin);
-            v.texRaw(newTexture.getInterpolatedU(newU), newTexture.getInterpolatedV(newV));
-        }
+            v.texRaw(newTexture.getU(newU), newTexture.getV(newV));
+        });
     }
 
     // this is an adaptation of fry's original UV contractor (pulled from BakedQuadBuilder).
     // ultimately this fixes UVs bleeding over the edge slightly when dealing with smaller models or tight UV bounds
     public static void contractUVs(Quad quad) {
         TextureAtlasSprite texture = quad.getTexture();
-        float sizeX = texture.getWidth() / (texture.getMaxU() - texture.getMinU());
-        float sizeY = texture.getHeight() / (texture.getMaxV() - texture.getMinV());
+        float sizeX = texture.getWidth() / (texture.getU1() - texture.getU0());
+        float sizeY = texture.getHeight() / (texture.getV1() - texture.getV0());
         float ep = 1F / (Math.max(sizeX, sizeY) * 0x100);
         float[] newUs = contract(quad, Vertex::getTexU, ep);
         float[] newVs = contract(quad, Vertex::getTexV, ep);
