@@ -1,129 +1,190 @@
 package mekanism.common.entity;
 
+import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.function.BiFunction;
+import java.util.function.BooleanSupplier;
 import java.util.function.Function;
-import java.util.function.Predicate;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import mekanism.api.Action;
+import mekanism.api.AutomationType;
 import mekanism.api.Coord4D;
 import mekanism.api.DataHandlerUtils;
+import mekanism.api.MekanismAPI;
 import mekanism.api.NBTConstants;
-import mekanism.api.annotations.NonNull;
 import mekanism.api.energy.IEnergyContainer;
 import mekanism.api.energy.IMekanismStrictEnergyHandler;
 import mekanism.api.energy.IStrictEnergyHandler;
-import mekanism.api.inventory.AutomationType;
 import mekanism.api.inventory.IInventorySlot;
 import mekanism.api.inventory.IMekanismInventory;
 import mekanism.api.math.FloatingLong;
+import mekanism.api.providers.IRobitSkinProvider;
 import mekanism.api.recipes.ItemStackToItemStackRecipe;
 import mekanism.api.recipes.cache.CachedRecipe;
-import mekanism.api.recipes.cache.ICachedRecipeHolder;
-import mekanism.api.recipes.cache.ItemStackToItemStackCachedRecipe;
+import mekanism.api.recipes.cache.CachedRecipe.OperationTracker.RecipeError;
+import mekanism.api.recipes.cache.OneInputCachedRecipe;
 import mekanism.api.recipes.inputs.IInputHandler;
 import mekanism.api.recipes.inputs.InputHelper;
 import mekanism.api.recipes.outputs.IOutputHandler;
 import mekanism.api.recipes.outputs.OutputHelper;
-import mekanism.common.CommonWorldTickHandler;
+import mekanism.api.robit.IRobit;
+import mekanism.api.robit.RobitSkin;
+import mekanism.api.security.ISecurityObject;
+import mekanism.api.security.SecurityMode;
+import mekanism.common.Mekanism;
 import mekanism.common.MekanismLang;
+import mekanism.common.advancements.MekanismCriteriaTriggers;
 import mekanism.common.capabilities.Capabilities;
+import mekanism.common.capabilities.CapabilityCache;
 import mekanism.common.capabilities.energy.BasicEnergyContainer;
+import mekanism.common.capabilities.resolver.BasicCapabilityResolver;
+import mekanism.common.capabilities.resolver.ICapabilityResolver;
 import mekanism.common.config.MekanismConfig;
 import mekanism.common.entity.ai.RobitAIFollow;
 import mekanism.common.entity.ai.RobitAIPickup;
-import mekanism.common.inventory.container.ContainerProvider;
 import mekanism.common.inventory.container.MekanismContainer;
-import mekanism.common.inventory.container.entity.robit.MainRobitContainer;
 import mekanism.common.inventory.container.sync.SyncableFloatingLong;
 import mekanism.common.inventory.container.sync.SyncableInt;
 import mekanism.common.inventory.slot.BasicInventorySlot;
 import mekanism.common.inventory.slot.EnergyInventorySlot;
 import mekanism.common.inventory.slot.InputInventorySlot;
 import mekanism.common.inventory.slot.OutputInventorySlot;
+import mekanism.common.inventory.warning.WarningTracker.WarningType;
 import mekanism.common.item.ItemConfigurator;
 import mekanism.common.item.ItemRobit;
+import mekanism.common.recipe.IMekanismRecipeTypeProvider;
 import mekanism.common.recipe.MekanismRecipeType;
+import mekanism.common.recipe.lookup.ISingleRecipeLookupHandler.ItemRecipeLookupHandler;
+import mekanism.common.recipe.lookup.cache.InputRecipeCache.SingleItem;
+import mekanism.common.recipe.lookup.monitor.RecipeCacheLookupMonitor;
 import mekanism.common.registries.MekanismContainerTypes;
 import mekanism.common.registries.MekanismDamageSource;
+import mekanism.common.registries.MekanismDataSerializers;
 import mekanism.common.registries.MekanismEntityTypes;
 import mekanism.common.registries.MekanismItems;
+import mekanism.common.registries.MekanismRobitSkins;
 import mekanism.common.tile.TileEntityChargepad;
 import mekanism.common.tile.interfaces.ISustainedInventory;
+import mekanism.common.tile.prefab.TileEntityRecipeMachine;
 import mekanism.common.util.MekanismUtils;
 import mekanism.common.util.NBTUtils;
-import net.minecraft.entity.CreatureEntity;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.MobEntity;
-import net.minecraft.entity.ai.attributes.AttributeModifierMap;
-import net.minecraft.entity.ai.attributes.Attributes;
-import net.minecraft.entity.ai.goal.LookAtGoal;
-import net.minecraft.entity.ai.goal.LookRandomlyGoal;
-import net.minecraft.entity.ai.goal.SwimGoal;
-import net.minecraft.entity.item.ItemEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.player.ServerPlayerEntity;
-import net.minecraft.inventory.container.ContainerType;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.network.datasync.DataParameter;
-import net.minecraft.network.datasync.DataSerializers;
-import net.minecraft.network.datasync.EntityDataManager;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.Direction;
-import net.minecraft.util.Hand;
-import net.minecraft.util.IWorldPosCallable;
-import net.minecraft.util.SoundEvents;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.RayTraceResult;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.world.World;
-import net.minecraft.world.server.ServerWorld;
+import mekanism.common.util.SecurityUtils;
+import mekanism.common.util.WorldUtils;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.Tag;
+import net.minecraft.network.syncher.EntityDataAccessor;
+import net.minecraft.network.syncher.EntityDataSerializer;
+import net.minecraft.network.syncher.EntityDataSerializers;
+import net.minecraft.network.syncher.SynchedEntityData;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.server.level.TicketType;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.MenuProvider;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.Mob;
+import net.minecraft.world.entity.PathfinderMob;
+import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
+import net.minecraft.world.entity.ai.attributes.Attributes;
+import net.minecraft.world.entity.ai.goal.FloatGoal;
+import net.minecraft.world.entity.ai.goal.LookAtPlayerGoal;
+import net.minecraft.world.entity.ai.goal.RandomLookAroundGoal;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.inventory.ContainerLevelAccess;
+import net.minecraft.world.inventory.MenuType;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.ChunkPos;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.portal.PortalInfo;
+import net.minecraft.world.phys.HitResult;
+import net.minecraft.world.phys.Vec3;
+import net.minecraftforge.client.model.data.ModelData;
+import net.minecraftforge.client.model.data.ModelProperty;
 import net.minecraftforge.common.ForgeHooks;
-import net.minecraftforge.common.util.Constants.NBT;
+import net.minecraftforge.common.capabilities.Capability;
 import net.minecraftforge.common.util.ITeleporter;
-import net.minecraftforge.fml.network.NetworkHooks;
-import net.minecraftforge.fml.server.ServerLifecycleHooks;
+import net.minecraftforge.common.util.LazyOptional;
 import net.minecraftforge.items.ItemHandlerHelper;
+import net.minecraftforge.network.NetworkHooks;
+import net.minecraftforge.server.ServerLifecycleHooks;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 //TODO: When Galacticraft gets ported make it so the robit can "breath" without a mask
-public class EntityRobit extends CreatureEntity implements IMekanismInventory, ISustainedInventory, ICachedRecipeHolder<ItemStackToItemStackRecipe>,
-      IMekanismStrictEnergyHandler {
+public class EntityRobit extends PathfinderMob implements IRobit, IMekanismInventory, ISustainedInventory, ISecurityObject, IMekanismStrictEnergyHandler,
+      ItemRecipeLookupHandler<ItemStackToItemStackRecipe> {
 
-    private static final DataParameter<String> OWNER_UUID = EntityDataManager.createKey(EntityRobit.class, DataSerializers.STRING);
-    private static final DataParameter<String> OWNER_NAME = EntityDataManager.createKey(EntityRobit.class, DataSerializers.STRING);
-    private static final DataParameter<Boolean> FOLLOW = EntityDataManager.createKey(EntityRobit.class, DataSerializers.BOOLEAN);
-    private static final DataParameter<Boolean> DROP_PICKUP = EntityDataManager.createKey(EntityRobit.class, DataSerializers.BOOLEAN);
+    public static AttributeSupplier.Builder getDefaultAttributes() {
+        return Mob.createMobAttributes().add(Attributes.MAX_HEALTH, 1.0D).add(Attributes.MOVEMENT_SPEED, 0.3F);
+    }
+
+    public static final ModelProperty<ResourceLocation> SKIN_TEXTURE_PROPERTY = new ModelProperty<>();
+
+    private static <T> EntityDataAccessor<T> define(EntityDataSerializer<T> dataSerializer) {
+        return SynchedEntityData.defineId(EntityRobit.class, dataSerializer);
+    }
+
+    private static final TicketType<Integer> ROBIT_CHUNK_UNLOAD = TicketType.create("robit_chunk_unload", Integer::compareTo, 20);
+    private static final EntityDataAccessor<UUID> OWNER_UUID = define(MekanismDataSerializers.UUID.get());
+    private static final EntityDataAccessor<String> OWNER_NAME = define(EntityDataSerializers.STRING);
+    private static final EntityDataAccessor<SecurityMode> SECURITY = define(MekanismDataSerializers.SECURITY.get());
+    private static final EntityDataAccessor<Boolean> FOLLOW = define(EntityDataSerializers.BOOLEAN);
+    private static final EntityDataAccessor<Boolean> DROP_PICKUP = define(EntityDataSerializers.BOOLEAN);
+    private static final EntityDataAccessor<RobitSkin> SKIN = define(MekanismDataSerializers.ROBIT_SKIN.get());
+
+    private static final List<RecipeError> TRACKED_ERROR_TYPES = List.of(
+          RecipeError.NOT_ENOUGH_ENERGY,
+          RecipeError.NOT_ENOUGH_INPUT,
+          RecipeError.NOT_ENOUGH_OUTPUT_SPACE,
+          RecipeError.INPUT_DOESNT_PRODUCE_OUTPUT
+    );
+
     public static final FloatingLong MAX_ENERGY = FloatingLong.createConst(100_000);
     private static final FloatingLong DISTANCE_MULTIPLIER = FloatingLong.createConst(1.5);
-    public Coord4D homeLocation;
-    public boolean texTick;
-    private int progress;
     //TODO: Note the robit smelts at double normal speed, we may want to make this configurable
     //TODO: Allow for upgrades in the robit?
-    private final int ticksRequired = 100;
+    private static final int ticksRequired = 100;
 
-    private CachedRecipe<ItemStackToItemStackRecipe> cachedRecipe = null;
+    private final CapabilityCache capabilityCache = new CapabilityCache();
+    public Coord4D homeLocation;
+    private int lastTextureUpdate;
+    private int textureIndex;
+    private int progress;
 
-    private final IInputHandler<@NonNull ItemStack> inputHandler;
-    private final IOutputHandler<@NonNull ItemStack> outputHandler;
+    /**
+     * The players currently using this robit.
+     */
+    private final Set<Player> playersUsing = new ObjectOpenHashSet<>();
 
-    @Nonnull
+    private final RecipeCacheLookupMonitor<ItemStackToItemStackRecipe> recipeCacheLookupMonitor;
+    private final BooleanSupplier recheckAllRecipeErrors;
+    private final boolean[] trackedErrors = new boolean[TRACKED_ERROR_TYPES.size()];
+
+    private final IInputHandler<@NotNull ItemStack> inputHandler;
+    private final IOutputHandler<@NotNull ItemStack> outputHandler;
+
+    @NotNull
     private final List<IInventorySlot> inventorySlots;
-    @Nonnull
+    @NotNull
     private final List<IInventorySlot> mainContainerSlots;
-    @Nonnull
+    @NotNull
     private final List<IInventorySlot> smeltingContainerSlots;
-    @Nonnull
+    @NotNull
     private final List<IInventorySlot> inventoryContainerSlots;
     private final EnergyInventorySlot energySlot;
     private final InputInventorySlot smeltingInputSlot;
@@ -131,10 +192,16 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
     private final List<IEnergyContainer> energyContainers;
     private final BasicEnergyContainer energyContainer;
 
-    public EntityRobit(EntityType<EntityRobit> type, World world) {
+    public EntityRobit(EntityType<EntityRobit> type, Level world) {
         super(type, world);
-        getNavigator().setCanSwim(false);
+        getNavigation().setCanFloat(false);
         setCustomNameVisible(true);
+        addCapabilityResolver(BasicCapabilityResolver.security(this));
+        recipeCacheLookupMonitor = new RecipeCacheLookupMonitor<>(this);
+        // Choose a random offset to check for all errors. We do this to ensure that not every tile tries to recheck errors for every
+        // recipe the same tick and thus create uneven spikes of CPU usage
+        int checkOffset = level.random.nextInt(TileEntityRecipeMachine.RECIPE_CHECK_FREQUENCY);
+        recheckAllRecipeErrors = () -> !playersUsing.isEmpty() && level.getGameTime() % TileEntityRecipeMachine.RECIPE_CHECK_FREQUENCY == checkOffset;
         energyContainers = Collections.singletonList(energyContainer = BasicEnergyContainer.input(MAX_ENERGY, this));
 
         inventorySlots = new ArrayList<>();
@@ -146,25 +213,32 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
                 inventoryContainerSlots.add(slot);
             }
         }
-        inventorySlots.add(energySlot = EnergyInventorySlot.fillOrConvert(energyContainer, this::getEntityWorld, this, 153, 17));
-        inventorySlots.add(smeltingInputSlot = InputInventorySlot.at(item -> containsRecipe(recipe -> recipe.getInput().testType(item)), this, 51, 35));
+        inventorySlots.add(energySlot = EnergyInventorySlot.fillOrConvert(energyContainer, this::getCommandSenderWorld, this, 153, 17));
+        inventorySlots.add(smeltingInputSlot = InputInventorySlot.at(this::containsRecipe, recipeCacheLookupMonitor, 51, 35));
         //TODO: Previously used FurnaceResultSlot, check if we need to replicate any special logic it had (like if it had xp logic or something)
         // Yes we probably do want this to allow for experience. Though maybe we should allow for experience for all our recipes/smelting recipes? V10
         inventorySlots.add(smeltingOutputSlot = OutputInventorySlot.at(this, 116, 35));
+        smeltingInputSlot.tracksWarnings(slot -> slot.warning(WarningType.NO_MATCHING_RECIPE, getWarningCheck(RecipeError.NOT_ENOUGH_INPUT)));
+        smeltingOutputSlot.tracksWarnings(slot -> slot.warning(WarningType.NO_SPACE_IN_OUTPUT, getWarningCheck(RecipeError.NOT_ENOUGH_OUTPUT_SPACE)));
 
         mainContainerSlots = Collections.singletonList(energySlot);
-        smeltingContainerSlots = Arrays.asList(smeltingInputSlot, smeltingOutputSlot);
+        smeltingContainerSlots = List.of(smeltingInputSlot, smeltingOutputSlot);
 
-        inputHandler = InputHelper.getInputHandler(smeltingInputSlot);
-        outputHandler = OutputHelper.getOutputHandler(smeltingOutputSlot);
+        inputHandler = InputHelper.getInputHandler(smeltingInputSlot, RecipeError.NOT_ENOUGH_INPUT);
+        outputHandler = OutputHelper.getOutputHandler(smeltingOutputSlot, RecipeError.NOT_ENOUGH_OUTPUT_SPACE);
     }
 
-    public EntityRobit(World world, double x, double y, double z) {
-        this(MekanismEntityTypes.ROBIT.getEntityType(), world);
-        setPosition(x, y, z);
-        prevPosX = x;
-        prevPosY = y;
-        prevPosZ = z;
+    @Nullable
+    public static EntityRobit create(Level world, double x, double y, double z) {
+        EntityRobit robit = MekanismEntityTypes.ROBIT.get().create(world);
+        if (robit == null) {
+            return null;
+        }
+        robit.setPos(x, y, z);
+        robit.xo = x;
+        robit.yo = y;
+        robit.zo = z;
+        return robit;
     }
 
     @Override
@@ -172,60 +246,71 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
         super.registerGoals();
         goalSelector.addGoal(1, new RobitAIPickup(this, 1));
         goalSelector.addGoal(2, new RobitAIFollow(this, 1, 4, 2));
-        goalSelector.addGoal(3, new LookAtGoal(this, PlayerEntity.class, 8));
-        goalSelector.addGoal(3, new LookRandomlyGoal(this));
-        goalSelector.addGoal(4, new SwimGoal(this));
-    }
-
-    public static AttributeModifierMap.MutableAttribute getDefaultAttributes() {
-        return MobEntity.func_233666_p_().createMutableAttribute(Attributes.MAX_HEALTH, 1.0D).createMutableAttribute(Attributes.MOVEMENT_SPEED, 0.3F);
+        goalSelector.addGoal(3, new LookAtPlayerGoal(this, Player.class, 8));
+        goalSelector.addGoal(3, new RandomLookAroundGoal(this));
+        goalSelector.addGoal(4, new FloatGoal(this));
     }
 
     @Override
-    public boolean canDespawn(double distanceToClosestPlayer) {
+    public boolean removeWhenFarAway(double distanceToClosestPlayer) {
         return false;
     }
 
     @Override
-    protected void registerData() {
-        super.registerData();
-        dataManager.register(OWNER_UUID, "");
-        dataManager.register(OWNER_NAME, "");
-        dataManager.register(FOLLOW, false);
-        dataManager.register(DROP_PICKUP, false);
+    protected void defineSynchedData() {
+        super.defineSynchedData();
+        //Default before it has a brief chance to get set the owner to mekanism's fake player
+        entityData.define(OWNER_UUID, Mekanism.gameProfile.getId());
+        entityData.define(OWNER_NAME, "");
+        entityData.define(SECURITY, SecurityMode.PUBLIC);
+        entityData.define(FOLLOW, false);
+        entityData.define(DROP_PICKUP, false);
+        entityData.define(SKIN, MekanismRobitSkins.BASE.get());
     }
 
     private FloatingLong getRoundedTravelEnergy() {
-        return DISTANCE_MULTIPLIER.multiply(Math.sqrt(getDistanceSq(prevPosX, prevPosY, prevPosZ)));
+        return DISTANCE_MULTIPLIER.multiply(Math.sqrt(distanceToSqr(xo, yo, zo)));
+    }
+
+    @Override
+    public void onRemovedFromWorld() {
+        if (level != null && !level.isClientSide && getFollowing() && getOwner() != null) {
+            //If this robit is currently following its owner and is being removed from the world (due to chunk unloading)
+            // register a ticket that loads the chunk for a second, so that it has time to have its following check run again
+            // (as it runs every 10 ticks, half a second), and then teleport to the owner.
+            ((ServerLevel) level).getChunkSource().addRegionTicket(ROBIT_CHUNK_UNLOAD, new ChunkPos(blockPosition()), 2, getId());
+        }
+        super.onRemovedFromWorld();
     }
 
     @Override
     public void baseTick() {
-        if (!world.isRemote) {
-            if (getFollowing() && getOwner() != null && getDistanceSq(getOwner()) > 4 && !getNavigator().noPath() && !energyContainer.isEmpty()) {
-                energyContainer.extract(getRoundedTravelEnergy(), Action.EXECUTE, AutomationType.INTERNAL);
+        if (!level.isClientSide) {
+            if (getFollowing()) {
+                Player owner = getOwner();
+                if (owner != null && distanceToSqr(owner) > 4 && !getNavigation().isDone() && !energyContainer.isEmpty()) {
+                    energyContainer.extract(getRoundedTravelEnergy(), Action.EXECUTE, AutomationType.INTERNAL);
+                }
             }
         }
 
         super.baseTick();
 
-        if (!world.isRemote) {
+        if (!level.isClientSide) {
             if (getDropPickup()) {
                 collectItems();
             }
             if (homeLocation == null) {
-                remove();
+                discard();
                 return;
             }
 
-            if (ticksExisted % 20 == 0) {
-                World serverWorld = ServerLifecycleHooks.getCurrentServer().getWorld(homeLocation.dimension);
+            if (tickCount % 20 == 0) {
+                Level serverWorld = ServerLifecycleHooks.getCurrentServer().getLevel(homeLocation.dimension);
                 BlockPos homePos = homeLocation.getPos();
-                if (serverWorld.isBlockPresent(homePos)) {
-                    if (MekanismUtils.getTileEntity(TileEntityChargepad.class, serverWorld, homePos) == null) {
-                        drop();
-                        remove();
-                    }
+                if (WorldUtils.isBlockLoaded(serverWorld, homePos) && WorldUtils.getTileEntity(TileEntityChargepad.class, serverWorld, homePos) == null) {
+                    drop();
+                    discard();
                 }
             }
 
@@ -234,41 +319,41 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
             }
 
             energySlot.fillContainerOrConvert();
-            cachedRecipe = getUpdatedCache(0);
-            if (cachedRecipe != null) {
-                cachedRecipe.process();
-            }
+            recipeCacheLookupMonitor.updateAndProcess();
         }
     }
 
+    public boolean isItemValid(ItemEntity item) {
+        return item.isAlive() && !item.hasPickUpDelay() && !(item.getItem().getItem() instanceof ItemRobit);
+    }
+
     private void collectItems() {
-        List<ItemEntity> items = world.getEntitiesWithinAABB(ItemEntity.class, getBoundingBox().grow(1.5, 1.5, 1.5));
+        List<ItemEntity> items = level.getEntitiesOfClass(ItemEntity.class, getBoundingBox().inflate(1.5, 1.5, 1.5));
         if (!items.isEmpty()) {
             for (ItemEntity item : items) {
-                if (item.cannotPickup() || item.getItem().getItem() instanceof ItemRobit || !item.isAlive()) {
-                    continue;
-                }
-                for (IInventorySlot slot : inventoryContainerSlots) {
-                    if (slot.isEmpty()) {
-                        slot.setStack(item.getItem());
-                        onItemPickup(item, item.getItem().getCount());
-                        item.remove();
-                        playSound(SoundEvents.ENTITY_ITEM_PICKUP, 1, ((rand.nextFloat() - rand.nextFloat()) * 0.7F + 1.0F) * 2.0F);
-                        break;
-                    }
-                    ItemStack itemStack = slot.getStack();
-                    int maxSize = slot.getLimit(itemStack);
-                    if (ItemHandlerHelper.canItemStacksStack(itemStack, item.getItem()) && itemStack.getCount() < maxSize) {
-                        int needed = maxSize - itemStack.getCount();
-                        int toAdd = Math.min(needed, item.getItem().getCount());
-                        MekanismUtils.logMismatchedStackSize(slot.growStack(toAdd, Action.EXECUTE), toAdd);
-                        item.getItem().shrink(toAdd);
-                        onItemPickup(item, toAdd);
-                        if (item.getItem().isEmpty()) {
-                            item.remove();
+                if (isItemValid(item)) {
+                    for (IInventorySlot slot : inventoryContainerSlots) {
+                        if (slot.isEmpty()) {
+                            slot.setStack(item.getItem());
+                            take(item, item.getItem().getCount());
+                            item.discard();
+                            playSound(SoundEvents.ITEM_PICKUP, 1, ((random.nextFloat() - random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
+                            break;
                         }
-                        playSound(SoundEvents.ENTITY_ITEM_PICKUP, 1, ((rand.nextFloat() - rand.nextFloat()) * 0.7F + 1.0F) * 2.0F);
-                        break;
+                        ItemStack itemStack = slot.getStack();
+                        int maxSize = slot.getLimit(itemStack);
+                        if (ItemHandlerHelper.canItemStacksStack(itemStack, item.getItem()) && itemStack.getCount() < maxSize) {
+                            int needed = maxSize - itemStack.getCount();
+                            int toAdd = Math.min(needed, item.getItem().getCount());
+                            MekanismUtils.logMismatchedStackSize(slot.growStack(toAdd, Action.EXECUTE), toAdd);
+                            item.getItem().shrink(toAdd);
+                            take(item, toAdd);
+                            if (item.getItem().isEmpty()) {
+                                item.discard();
+                            }
+                            playSound(SoundEvents.ITEM_PICKUP, 1, ((random.nextFloat() - random.nextFloat()) * 0.7F + 1.0F) * 2.0F);
+                            break;
+                        }
                     }
                 }
             }
@@ -276,58 +361,70 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
     }
 
     public void goHome() {
-        if (world.isRemote()) {
+        if (level.isClientSide()) {
             return;
         }
         setFollowing(false);
-        if (world.func_234923_W_() == homeLocation.dimension) {
-            setPositionAndUpdate(homeLocation.getX() + 0.5, homeLocation.getY() + 0.3, homeLocation.getZ() + 0.5);
+        if (level.dimension() == homeLocation.dimension) {
+            setDeltaMovement(0, 0, 0);
+            teleportTo(homeLocation.getX() + 0.5, homeLocation.getY() + 0.3, homeLocation.getZ() + 0.5);
         } else {
-            ServerWorld newWorld = ((ServerWorld) world).getServer().getWorld(homeLocation.dimension);
+            ServerLevel newWorld = ((ServerLevel) this.level).getServer().getLevel(homeLocation.dimension);
             if (newWorld != null) {
+                Vec3 destination = new Vec3(homeLocation.getX() + 0.5, homeLocation.getY() + 0.3, homeLocation.getZ() + 0.5);
                 changeDimension(newWorld, new ITeleporter() {
                     @Override
-                    public Entity placeEntity(Entity entity, ServerWorld currentWorld, ServerWorld destWorld, float yaw, Function<Boolean, Entity> repositionEntity) {
-                        Entity repositionedEntity = repositionEntity.apply(false);
-                        repositionedEntity.setPositionAndUpdate(homeLocation.getX() + 0.5, homeLocation.getY() + 0.3, homeLocation.getZ() + 0.5);
-                        return repositionedEntity;
+                    public Entity placeEntity(Entity entity, ServerLevel currentWorld, ServerLevel destWorld, float yaw, Function<Boolean, Entity> repositionEntity) {
+                        return repositionEntity.apply(false);
+                    }
+
+                    @Override
+                    public PortalInfo getPortalInfo(Entity entity, ServerLevel destWorld, Function<ServerLevel, PortalInfo> defaultPortalInfo) {
+                        return new PortalInfo(destination, Vec3.ZERO, entity.getYRot(), entity.getXRot());
+                    }
+
+                    @Override
+                    public boolean playTeleportSound(ServerPlayer player, ServerLevel sourceWorld, ServerLevel destWorld) {
+                        return false;
                     }
                 });
             }
         }
-        setMotion(0, 0, 0);
     }
 
     private boolean isOnChargepad() {
-        return MekanismUtils.getTileEntity(TileEntityChargepad.class, world, getPosition()) != null;
+        return WorldUtils.getTileEntity(TileEntityChargepad.class, level, blockPosition()) != null;
     }
 
-    @Nonnull
+    @NotNull
     @Override
-    public ActionResultType applyPlayerInteraction(PlayerEntity player, @Nonnull Vector3d vec, @Nonnull Hand hand) {
-        ItemStack stack = player.getHeldItem(hand);
-        if (player.isSneaking()) {
+    public InteractionResult interactAt(@NotNull Player player, @NotNull Vec3 vec, @NotNull InteractionHand hand) {
+        if (!MekanismAPI.getSecurityUtils().canAccessOrDisplayError(player, this)) {
+            return InteractionResult.FAIL;
+        } else if (player.isShiftKeyDown()) {
+            ItemStack stack = player.getItemInHand(hand);
             if (!stack.isEmpty() && stack.getItem() instanceof ItemConfigurator) {
-                if (!world.isRemote) {
+                if (!level.isClientSide) {
                     drop();
                 }
-                remove();
-                player.swingArm(hand);
-                return ActionResultType.SUCCESS;
+                discard();
+                player.swing(hand);
+                return InteractionResult.SUCCESS;
             }
-        } else {
-            if (!world.isRemote) {
-                NetworkHooks.openGui((ServerPlayerEntity) player, new ContainerProvider(MekanismLang.ROBIT, (i, inv, p) -> new MainRobitContainer(i, inv, this)),
-                      buf -> buf.writeVarInt(getEntityId()));
+            return InteractionResult.PASS;
+        } else if (!level.isClientSide) {
+            MenuProvider provider = MekanismContainerTypes.MAIN_ROBIT.getProvider(MekanismLang.ROBIT, this);
+            if (provider != null) {
+                //Validate the provider isn't null, it shouldn't be but just in case
+                NetworkHooks.openScreen((ServerPlayer) player, provider, buf -> buf.writeVarInt(getId()));
             }
-            return ActionResultType.SUCCESS;
         }
-        return ActionResultType.PASS;
+        return InteractionResult.sidedSuccess(level.isClientSide);
     }
 
     private ItemStack getItemVariant() {
         ItemStack stack = MekanismItems.ROBIT.getItemStack();
-        Optional<IStrictEnergyHandler> capability = MekanismUtils.toOptional(stack.getCapability(Capabilities.STRICT_ENERGY_CAPABILITY));
+        Optional<IStrictEnergyHandler> capability = stack.getCapability(Capabilities.STRICT_ENERGY).resolve();
         if (capability.isPresent()) {
             IStrictEnergyHandler energyHandlerItem = capability.get();
             if (energyHandlerItem.getEnergyContainerCount() > 0) {
@@ -335,16 +432,21 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
             }
         }
         ItemRobit item = (ItemRobit) stack.getItem();
-        item.setInventory(((ISustainedInventory) this).getInventory(), stack);
+        item.setInventory(getInventory(), stack);
         item.setName(stack, getName());
+        stack.getCapability(Capabilities.SECURITY_OBJECT).ifPresent(security -> {
+            security.setOwnerUUID(getOwnerUUID());
+            security.setSecurityMode(getSecurityMode());
+        });
+        item.setSkin(stack, getSkin());
         return stack;
     }
 
     public void drop() {
         //TODO: Move this to loot table?
-        ItemEntity entityItem = new ItemEntity(world, getPosX(), getPosY() + 0.3, getPosZ(), getItemVariant());
-        entityItem.setMotion(0, rand.nextGaussian() * 0.05F + 0.2F, 0);
-        world.addEntity(entityItem);
+        ItemEntity entityItem = new ItemEntity(level, getX(), getY() + 0.3, getZ(), getItemVariant());
+        entityItem.setDeltaMovement(0, random.nextGaussian() * 0.05F + 0.2F, 0);
+        level.addFreshEntity(entityItem);
     }
 
     public double getScaledProgress() {
@@ -361,11 +463,10 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
     }
 
     @Override
-    public void writeAdditional(@Nonnull CompoundNBT nbtTags) {
-        super.writeAdditional(nbtTags);
-        if (getOwnerUUID() != null) {
-            nbtTags.putUniqueId(NBTConstants.OWNER_UUID, getOwnerUUID());
-        }
+    public void addAdditionalSaveData(@NotNull CompoundTag nbtTags) {
+        super.addAdditionalSaveData(nbtTags);
+        nbtTags.putUUID(NBTConstants.OWNER_UUID, getOwnerUUID());
+        NBTUtils.writeEnum(nbtTags, NBTConstants.SECURITY_MODE, getSecurityMode());
         nbtTags.putBoolean(NBTConstants.FOLLOW, getFollowing());
         nbtTags.putBoolean(NBTConstants.PICKUP_DROPS, getDropPickup());
         if (homeLocation != null) {
@@ -374,41 +475,47 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
         nbtTags.put(NBTConstants.ITEMS, DataHandlerUtils.writeContainers(getInventorySlots(null)));
         nbtTags.put(NBTConstants.ENERGY_CONTAINERS, DataHandlerUtils.writeContainers(getEnergyContainers(null)));
         nbtTags.putInt(NBTConstants.PROGRESS, getOperatingTicks());
+        NBTUtils.writeRegistryEntry(nbtTags, NBTConstants.SKIN, MekanismAPI.robitSkinRegistry(), getSkin());
     }
 
     @Override
-    public void readAdditional(@Nonnull CompoundNBT nbtTags) {
-        super.readAdditional(nbtTags);
+    public void readAdditionalSaveData(@NotNull CompoundTag nbtTags) {
+        super.readAdditionalSaveData(nbtTags);
         NBTUtils.setUUIDIfPresent(nbtTags, NBTConstants.OWNER_UUID, this::setOwnerUUID);
+        NBTUtils.setEnumIfPresent(nbtTags, NBTConstants.SECURITY_MODE, SecurityMode::byIndexStatic, this::setSecurityMode);
         setFollowing(nbtTags.getBoolean(NBTConstants.FOLLOW));
         setDropPickup(nbtTags.getBoolean(NBTConstants.PICKUP_DROPS));
         homeLocation = Coord4D.read(nbtTags);
-        DataHandlerUtils.readContainers(getInventorySlots(null), nbtTags.getList(NBTConstants.ITEMS, NBT.TAG_COMPOUND));
-        DataHandlerUtils.readContainers(getEnergyContainers(null), nbtTags.getList(NBTConstants.ENERGY_CONTAINERS, NBT.TAG_COMPOUND));
+        DataHandlerUtils.readContainers(getInventorySlots(null), nbtTags.getList(NBTConstants.ITEMS, Tag.TAG_COMPOUND));
+        DataHandlerUtils.readContainers(getEnergyContainers(null), nbtTags.getList(NBTConstants.ENERGY_CONTAINERS, Tag.TAG_COMPOUND));
         progress = nbtTags.getInt(NBTConstants.PROGRESS);
+        NBTUtils.setRegistryEntryIfPresentElse(nbtTags, NBTConstants.SKIN, MekanismAPI.robitSkinRegistry(), skin -> setSkin(skin, null),
+              () -> setSkin(MekanismRobitSkins.BASE, null));
     }
 
     @Override
-    public boolean isInvulnerableTo(@Nonnull DamageSource source) {
+    public boolean isInvulnerableTo(@NotNull DamageSource source) {
         return source == MekanismDamageSource.RADIATION || super.isInvulnerableTo(source);
     }
 
     @Override
-    protected void damageEntity(@Nonnull DamageSource damageSource, float amount) {
+    protected void actuallyHurt(@NotNull DamageSource damageSource, float amount) {
         amount = ForgeHooks.onLivingHurt(this, damageSource, amount);
         if (amount <= 0) {
             return;
         }
-        amount = applyArmorCalculations(damageSource, amount);
-        amount = applyPotionDamageCalculations(damageSource, amount);
-        float j = getHealth();
-
+        amount = getDamageAfterArmorAbsorb(damageSource, amount);
+        amount = getDamageAfterMagicAbsorb(damageSource, amount);
+        if (damageSource.isFall()) {
+            //Half the "potential" damage the Robit can take from falling
+            amount /= 2;
+        }
         energyContainer.extract(FloatingLong.create(1_000 * amount), Action.EXECUTE, AutomationType.INTERNAL);
-        getCombatTracker().trackDamage(damageSource, j, amount);
+        getCombatTracker().recordDamage(damageSource, getHealth(), amount);
     }
 
     @Override
-    protected void onDeathUpdate() {
+    protected void tickDeath() {
     }
 
     public void setHome(Coord4D home) {
@@ -416,62 +523,97 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
     }
 
     @Override
-    public boolean canBePushed() {
+    public boolean isPushable() {
         return !energyContainer.isEmpty();
     }
 
-    public PlayerEntity getOwner() {
-        return world.getPlayerByUuid(getOwnerUUID());
+    public Player getOwner() {
+        return level.getPlayerByUUID(getOwnerUUID());
     }
 
+    @NotNull
+    @Override
     public String getOwnerName() {
-        return dataManager.get(OWNER_NAME);
+        return entityData.get(OWNER_NAME);
     }
 
+    @NotNull
+    @Override
     public UUID getOwnerUUID() {
-        return UUID.fromString(dataManager.get(OWNER_UUID));
+        return entityData.get(OWNER_UUID);
     }
 
-    public void setOwnerUUID(UUID uuid) {
-        dataManager.set(OWNER_UUID, uuid.toString());
-        dataManager.set(OWNER_NAME, MekanismUtils.getLastKnownUsername(uuid));
-    }
-
-    public boolean getFollowing() {
-        return dataManager.get(FOLLOW);
-    }
-
-    public void setFollowing(boolean follow) {
-        dataManager.set(FOLLOW, follow);
-    }
-
-    public boolean getDropPickup() {
-        return dataManager.get(DROP_PICKUP);
-    }
-
-    public void setDropPickup(boolean pickup) {
-        dataManager.set(DROP_PICKUP, pickup);
+    @NotNull
+    @Override
+    public SecurityMode getSecurityMode() {
+        return entityData.get(SECURITY);
     }
 
     @Override
-    public void setInventory(ListNBT nbtTags, Object... data) {
+    public void setSecurityMode(@NotNull SecurityMode mode) {
+        SecurityMode current = getSecurityMode();
+        if (current != mode) {
+            entityData.set(SECURITY, mode);
+            onSecurityChanged(current, mode);
+        }
+    }
+
+    @Override
+    public void onSecurityChanged(@NotNull SecurityMode old, @NotNull SecurityMode mode) {
+        if (!level.isClientSide) {
+            SecurityUtils.INSTANCE.securityChanged(playersUsing, this, old, mode);
+        }
+    }
+
+    public void open(Player player) {
+        playersUsing.add(player);
+    }
+
+    public void close(Player player) {
+        playersUsing.remove(player);
+    }
+
+    @Override
+    public void setOwnerUUID(UUID uuid) {
+        entityData.set(OWNER_UUID, uuid);
+        entityData.set(OWNER_NAME, MekanismUtils.getLastKnownUsername(uuid));
+    }
+
+    public boolean getFollowing() {
+        return entityData.get(FOLLOW);
+    }
+
+    public void setFollowing(boolean follow) {
+        entityData.set(FOLLOW, follow);
+    }
+
+    public boolean getDropPickup() {
+        return entityData.get(DROP_PICKUP);
+    }
+
+    public void setDropPickup(boolean pickup) {
+        entityData.set(DROP_PICKUP, pickup);
+    }
+
+    @Override
+    public void setInventory(ListTag nbtTags, Object... data) {
         if (nbtTags != null && !nbtTags.isEmpty()) {
             DataHandlerUtils.readContainers(getInventorySlots(null), nbtTags);
         }
     }
 
     @Override
-    public ListNBT getInventory(Object... data) {
+    public ListTag getInventory(Object... data) {
         return DataHandlerUtils.writeContainers(getInventorySlots(null));
     }
 
-    @Nonnull
+    @NotNull
     @Override
     public List<IInventorySlot> getInventorySlots(@Nullable Direction side) {
         return hasInventory() ? inventorySlots : Collections.emptyList();
     }
 
-    @Nonnull
+    @NotNull
     @Override
     public List<IEnergyContainer> getEnergyContainers(@Nullable Direction side) {
         return canHandleEnergy() ? energyContainers : Collections.emptyList();
@@ -482,45 +624,30 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
         //TODO: Do we need to save the things? Probably, if not remove the call to here from createNewCachedRecipe
     }
 
-    @Nonnull
-    public List<IInventorySlot> getContainerInventorySlots(@Nonnull ContainerType<?> containerType) {
+    @NotNull
+    public List<IInventorySlot> getContainerInventorySlots(@NotNull MenuType<?> containerType) {
         if (!hasInventory()) {
             return Collections.emptyList();
-        } else if (containerType == MekanismContainerTypes.INVENTORY_ROBIT.getContainerType()) {
+        } else if (containerType == MekanismContainerTypes.INVENTORY_ROBIT.get()) {
             return inventoryContainerSlots;
-        } else if (containerType == MekanismContainerTypes.MAIN_ROBIT.getContainerType()) {
+        } else if (containerType == MekanismContainerTypes.MAIN_ROBIT.get()) {
             return mainContainerSlots;
-        } else if (containerType == MekanismContainerTypes.SMELTING_ROBIT.getContainerType()) {
+        } else if (containerType == MekanismContainerTypes.SMELTING_ROBIT.get()) {
             return smeltingContainerSlots;
         }
         return Collections.emptyList();
     }
 
-    @Nonnull
-    public MekanismRecipeType<ItemStackToItemStackRecipe> getRecipeType() {
-        return MekanismRecipeType.SMELTING;
-    }
-
-    public boolean containsRecipe(@Nonnull Predicate<ItemStackToItemStackRecipe> matchCriteria) {
-        return getRecipeType().contains(getEntityWorld(), matchCriteria);
-    }
-
-    @Nullable
-    public ItemStackToItemStackRecipe findFirstRecipe(@Nonnull Predicate<ItemStackToItemStackRecipe> matchCriteria) {
-        return getRecipeType().findFirst(getEntityWorld(), matchCriteria);
-    }
-
-    @Nullable
+    @NotNull
     @Override
-    public CachedRecipe<ItemStackToItemStackRecipe> getCachedRecipe(int cacheIndex) {
-        return cachedRecipe;
+    public IMekanismRecipeTypeProvider<ItemStackToItemStackRecipe, SingleItem<ItemStackToItemStackRecipe>> getRecipeType() {
+        return MekanismRecipeType.SMELTING;
     }
 
     @Nullable
     @Override
     public ItemStackToItemStackRecipe getRecipe(int cacheIndex) {
-        ItemStack stack = inputHandler.getInput();
-        return stack.isEmpty() ? null : findFirstRecipe(recipe -> recipe.test(stack));
+        return findFirstRecipe(inputHandler);
     }
 
     public IEnergyContainer getEnergyContainer() {
@@ -528,43 +655,159 @@ public class EntityRobit extends CreatureEntity implements IMekanismInventory, I
     }
 
     @Override
-    public boolean invalidateCache() {
-        return CommonWorldTickHandler.flushTagAndRecipeCaches;
-    }
-
-    @Override
-    public ItemStack getPickedResult(RayTraceResult target) {
+    public ItemStack getPickedResult(HitResult target) {
         return getItemVariant();
     }
 
-    @Nullable
     @Override
-    public CachedRecipe<ItemStackToItemStackRecipe> createNewCachedRecipe(@Nonnull ItemStackToItemStackRecipe recipe, int cacheIndex) {
+    public void clearRecipeErrors(int cacheIndex) {
+        Arrays.fill(trackedErrors, false);
+    }
+
+    @NotNull
+    @Override
+    public CachedRecipe<ItemStackToItemStackRecipe> createNewCachedRecipe(@NotNull ItemStackToItemStackRecipe recipe, int cacheIndex) {
         //TODO: Make a robit specific smelting energy usage config
-        return new ItemStackToItemStackCachedRecipe(recipe, inputHandler, outputHandler)
+        return OneInputCachedRecipe.itemToItem(recipe, recheckAllRecipeErrors, inputHandler, outputHandler)
+              .setErrorsChanged(errors -> {
+                  for (int i = 0; i < trackedErrors.length; i++) {
+                      trackedErrors[i] = errors.contains(TRACKED_ERROR_TYPES.get(i));
+                  }
+              })
               .setEnergyRequirements(MekanismConfig.usage.energizedSmelter, energyContainer)
               .setRequiredTicks(() -> ticksRequired)
               .setOnFinish(this::onContentsChanged)
               .setOperatingTicksChanged(operatingTicks -> progress = operatingTicks);
     }
 
-    public void addContainerTrackers(@Nonnull ContainerType<?> containerType, MekanismContainer container) {
-        if (containerType == MekanismContainerTypes.MAIN_ROBIT.getContainerType()) {
+    public BooleanSupplier getWarningCheck(RecipeError error) {
+        int errorIndex = TRACKED_ERROR_TYPES.indexOf(error);
+        if (errorIndex == -1) {
+            //Something went wrong
+            return () -> false;
+        }
+        return () -> trackedErrors[errorIndex];
+    }
+
+    public void addContainerTrackers(MekanismContainer container) {
+        MenuType<?> containerType = container.getType();
+        if (containerType == MekanismContainerTypes.MAIN_ROBIT.get()) {
             container.track(SyncableFloatingLong.create(energyContainer::getEnergy, energyContainer::setEnergy));
-        } else if (containerType == MekanismContainerTypes.SMELTING_ROBIT.getContainerType()) {
+        } else if (containerType == MekanismContainerTypes.SMELTING_ROBIT.get()) {
             container.track(SyncableInt.create(() -> progress, value -> progress = value));
+            container.trackArray(trackedErrors);
         }
     }
 
-    public IWorldPosCallable getWorldPosCallable() {
-        return new IWorldPosCallable() {
-            @Nonnull
+    public ContainerLevelAccess getWorldPosCallable() {
+        return new ContainerLevelAccess() {
+            @NotNull
             @Override
-            public <T> Optional<T> apply(@Nonnull BiFunction<World, BlockPos, T> worldBlockPosTBiFunction) {
+            public <T> Optional<T> evaluate(@NotNull BiFunction<Level, BlockPos, T> worldBlockPosTBiFunction) {
                 //Note: We use an anonymous class implementation rather than using IWorldPosCallable.of, so that if the robit moves
                 // this uses the proper updated position
-                return Optional.of(worldBlockPosTBiFunction.apply(getEntityWorld(), getPosition()));
+                return Optional.ofNullable(worldBlockPosTBiFunction.apply(getCommandSenderWorld(), blockPosition()));
             }
         };
+    }
+
+    @NotNull
+    @Override
+    public RobitSkin getSkin() {
+        return entityData.get(SKIN);
+    }
+
+    @Override
+    public boolean setSkin(@NotNull IRobitSkinProvider skinProvider, @Nullable Player player) {
+        Objects.requireNonNull(skinProvider, "Robit skin cannot be null.");
+        RobitSkin skin = skinProvider.getSkin();
+        if (getSkin() == skin) {
+            //Don't do anything if the robit already has that skin selected
+            return true;
+        }
+        if (player != null) {
+            if (!MekanismAPI.getSecurityUtils().canAccess(player, this) || !skin.isUnlocked(player)) {
+                return false;
+            }
+            if (player instanceof ServerPlayer serverPlayer) {
+                MekanismCriteriaTriggers.CHANGE_ROBIT_SKIN.trigger(serverPlayer, skin);
+            }
+        }
+        entityData.set(SKIN, skin);
+        return true;
+    }
+
+    /**
+     * @apiNote Only call on the client.
+     */
+    public ModelData getModelData() {
+        //TODO: Eventually we might want to evaluate caching this model data object
+        return ModelData.builder().with(SKIN_TEXTURE_PROPERTY, getModelTexture()).build();
+    }
+
+    /**
+     * @apiNote Only call on the client.
+     */
+    private ResourceLocation getModelTexture() {
+        RobitSkin skin = getSkin();
+        List<ResourceLocation> textures = skin.getTextures();
+        if (textures.isEmpty()) {
+            textureIndex = 0;
+            Mekanism.logger.error("Robit Skin: {}, has no textures; resetting skin to base.", skin.getRegistryName());
+            setSkin(MekanismRobitSkins.BASE, null);
+            if (getSkin().getTextures().isEmpty()) {
+                //This should not happen but if it does throw a cleaner error than a stack overflow
+                throw new IllegalStateException("Base robit skin has no textures defined.");
+            }
+            return getModelTexture();
+        }
+        int textureCount = textures.size();
+        if (textureCount == 1) {
+            textureIndex = 0;
+        } else {
+            if (lastTextureUpdate < tickCount) {
+                //Only check for movement and if the texture index needs to update if we haven't already done so this tick
+                lastTextureUpdate = tickCount;
+                if (Math.abs(getX() - xo) + Math.abs(getZ() - zo) > 0.001) {
+                    //If the robit moved and the ticks are such that it should update, update the index
+                    if (tickCount % 3 == 0) {
+                        textureIndex++;
+                    }
+                }
+            }
+            if (textureIndex >= textureCount) {
+                textureIndex = textureIndex % textureCount;
+            }
+        }
+        return textures.get(textureIndex);
+    }
+
+    protected final void addCapabilityResolver(ICapabilityResolver resolver) {
+        capabilityCache.addCapabilityResolver(resolver);
+    }
+
+    @NotNull
+    @Override
+    public <T> LazyOptional<T> getCapability(@NotNull Capability<T> capability, @Nullable Direction side) {
+        if (capabilityCache != null) {
+            //Validate the cache is not null. In theory this should never happen unless some mod is trying to access capabilities
+            // before our entity is done constructing, but there are cases such as the size event where based on when they are
+            // fired if it is based on the entity's caps then the first call will happen before the enitity has finished
+            // constructing. See https://github.com/mekanism/Mekanism/issues/7490
+            if (capabilityCache.isCapabilityDisabled(capability, side)) {
+                return LazyOptional.empty();
+            } else if (capabilityCache.canResolve(capability)) {
+                return capabilityCache.getCapabilityUnchecked(capability, side);
+            }
+        }
+        //Call to LivingEntity's Implementation of getCapability if we could not find a capability ourselves
+        return super.getCapability(capability, side);
+    }
+
+    @Override
+    public void invalidateCaps() {
+        super.invalidateCaps();
+        //When the capabilities on our tile get invalidated, make sure to also invalidate all our cached ones
+        capabilityCache.invalidateAll();
     }
 }
