@@ -4,18 +4,19 @@ import com.google.common.collect.LinkedHashMultimap;
 import com.google.common.collect.Multimap;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import java.lang.annotation.ElementType;
+import java.lang.reflect.Array;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import mekanism.api.chemical.IChemicalTank;
 import mekanism.api.chemical.gas.GasStack;
 import mekanism.api.chemical.gas.IGasTank;
@@ -36,58 +37,64 @@ import mekanism.common.capabilities.merged.MergedTank;
 import mekanism.common.inventory.container.MekanismContainer;
 import mekanism.common.inventory.container.sync.ISyncableData;
 import mekanism.common.inventory.container.sync.SyncableEnum;
+import mekanism.common.lib.MekAnnotationScanner.BaseAnnotationScanner;
 import mekanism.common.lib.math.voxel.VoxelCuboid;
-import mekanism.common.network.container.property.PropertyType;
+import mekanism.common.network.to_client.container.property.PropertyType;
 import mekanism.common.util.LambdaMetaFactoryUtil;
-import net.minecraft.util.math.BlockPos;
+import net.minecraft.core.BlockPos;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.fluids.IFluidTank;
-import net.minecraftforge.fml.ModList;
-import net.minecraftforge.forgespi.language.ModFileScanData;
+import net.minecraftforge.forgespi.language.IModFileInfo;
 import net.minecraftforge.forgespi.language.ModFileScanData.AnnotationData;
 import org.objectweb.asm.Type;
 
-public class SyncMapper {
+public class SyncMapper extends BaseAnnotationScanner {
 
+    public static final SyncMapper INSTANCE = new SyncMapper();
     public static final String DEFAULT_TAG = "default";
-    private static final List<SpecialPropertyHandler<?>> specialProperties = new ArrayList<>();
-    private static final Map<Class<?>, PropertyDataClassCache> syncablePropertyMap = new Object2ObjectOpenHashMap<>();
+    private final List<SpecialPropertyHandler<?>> specialProperties = new ArrayList<>();
+    private final Map<Class<?>, PropertyDataClassCache> syncablePropertyMap = new Object2ObjectOpenHashMap<>();
 
-    static {
+    private SyncMapper() {
+        //Note: We use unchecked setters here as there is no good way to determine if we are on the server or the client
+        // and when we are on the server the setters should not end up being called anyway. The reason that we need to
+        // used unchecked setters is that if a recipe got removed so there is a substance in a tank that was valid but no
+        // longer is valid, we want to ensure that the client is able to properly render it instead of printing an error due
+        // to the client thinking that it is invalid
         specialProperties.add(new SpecialPropertyHandler<>(IExtendedFluidTank.class,
-              SpecialPropertyData.create(FluidStack.class, IFluidTank::getFluid, IExtendedFluidTank::setStack)
+              SpecialPropertyData.create(FluidStack.class, IFluidTank::getFluid, IExtendedFluidTank::setStackUnchecked)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(IGasTank.class,
-              SpecialPropertyData.create(GasStack.class, IChemicalTank::getStack, IChemicalTank::setStack)
+              SpecialPropertyData.create(GasStack.class, IChemicalTank::getStack, IChemicalTank::setStackUnchecked)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(IInfusionTank.class,
-              SpecialPropertyData.create(InfusionStack.class, IChemicalTank::getStack, IChemicalTank::setStack)
+              SpecialPropertyData.create(InfusionStack.class, IChemicalTank::getStack, IChemicalTank::setStackUnchecked)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(IPigmentTank.class,
-              SpecialPropertyData.create(PigmentStack.class, IChemicalTank::getStack, IChemicalTank::setStack)
+              SpecialPropertyData.create(PigmentStack.class, IChemicalTank::getStack, IChemicalTank::setStackUnchecked)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(ISlurryTank.class,
-              SpecialPropertyData.create(SlurryStack.class, IChemicalTank::getStack, IChemicalTank::setStack)
+              SpecialPropertyData.create(SlurryStack.class, IChemicalTank::getStack, IChemicalTank::setStackUnchecked)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(IEnergyContainer.class,
               SpecialPropertyData.create(FloatingLong.class, IEnergyContainer::getEnergy, IEnergyContainer::setEnergy)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(BasicHeatCapacitor.class,
-              SpecialPropertyData.create(double.class, BasicHeatCapacitor::getHeatCapacity, BasicHeatCapacitor::setHeatCapacityFromPacket),
-              SpecialPropertyData.create(double.class, IHeatCapacitor::getHeat, IHeatCapacitor::setHeat)
+              SpecialPropertyData.create(Double.TYPE, BasicHeatCapacitor::getHeatCapacity, BasicHeatCapacitor::setHeatCapacityFromPacket),
+              SpecialPropertyData.create(Double.TYPE, IHeatCapacitor::getHeat, IHeatCapacitor::setHeat)
         ));
         specialProperties.add(new SpecialPropertyHandler<>(MergedTank.class,
-              SpecialPropertyData.create(FluidStack.class, obj -> obj.getFluidTank().getFluid(), (obj, val) -> obj.getFluidTank().setStack(val)),
-              SpecialPropertyData.create(GasStack.class, obj -> obj.getGasTank().getStack(), (obj, val) -> obj.getGasTank().setStack(val)),
-              SpecialPropertyData.create(InfusionStack.class, obj -> obj.getInfusionTank().getStack(), (obj, val) -> obj.getInfusionTank().setStack(val)),
-              SpecialPropertyData.create(PigmentStack.class, obj -> obj.getPigmentTank().getStack(), (obj, val) -> obj.getPigmentTank().setStack(val)),
-              SpecialPropertyData.create(SlurryStack.class, obj -> obj.getSlurryTank().getStack(), (obj, val) -> obj.getSlurryTank().setStack(val))
+              SpecialPropertyData.create(FluidStack.class, obj -> obj.getFluidTank().getFluid(), (obj, val) -> obj.getFluidTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(GasStack.class, obj -> obj.getGasTank().getStack(), (obj, val) -> obj.getGasTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(InfusionStack.class, obj -> obj.getInfusionTank().getStack(), (obj, val) -> obj.getInfusionTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(PigmentStack.class, obj -> obj.getPigmentTank().getStack(), (obj, val) -> obj.getPigmentTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(SlurryStack.class, obj -> obj.getSlurryTank().getStack(), (obj, val) -> obj.getSlurryTank().setStackUnchecked(val))
         ));
         specialProperties.add(new SpecialPropertyHandler<>(MergedChemicalTank.class,
-              SpecialPropertyData.create(GasStack.class, obj -> obj.getGasTank().getStack(), (obj, val) -> obj.getGasTank().setStack(val)),
-              SpecialPropertyData.create(InfusionStack.class, obj -> obj.getInfusionTank().getStack(), (obj, val) -> obj.getInfusionTank().setStack(val)),
-              SpecialPropertyData.create(PigmentStack.class, obj -> obj.getPigmentTank().getStack(), (obj, val) -> obj.getPigmentTank().setStack(val)),
-              SpecialPropertyData.create(SlurryStack.class, obj -> obj.getSlurryTank().getStack(), (obj, val) -> obj.getSlurryTank().setStack(val))
+              SpecialPropertyData.create(GasStack.class, obj -> obj.getGasTank().getStack(), (obj, val) -> obj.getGasTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(InfusionStack.class, obj -> obj.getInfusionTank().getStack(), (obj, val) -> obj.getInfusionTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(PigmentStack.class, obj -> obj.getPigmentTank().getStack(), (obj, val) -> obj.getPigmentTank().setStackUnchecked(val)),
+              SpecialPropertyData.create(SlurryStack.class, obj -> obj.getSlurryTank().getStack(), (obj, val) -> obj.getSlurryTank().setStackUnchecked(val))
         ));
         specialProperties.add(new SpecialPropertyHandler<>(VoxelCuboid.class,
               SpecialPropertyData.create(BlockPos.class, VoxelCuboid::getMinPos, VoxelCuboid::setMinPos),
@@ -95,147 +102,96 @@ public class SyncMapper {
         ));
     }
 
-    public static void collectScanData() {
-        try {
-            collectScanDataUnsafe();
-        } catch (Throwable e) {
-            Mekanism.logger.error("Failed to collect scan data and create sync maps", e);
-        }
+    @Override
+    protected Map<ElementType, Type[]> getSupportedTypes() {
+        return Collections.singletonMap(ElementType.FIELD, new Type[]{Type.getType(ContainerSync.class)});
     }
 
-    private static void collectScanDataUnsafe() throws Throwable {
-        ModList modList = ModList.get();
-        Map<Class<?>, List<AnnotationData>> knownClasses = new Object2ObjectOpenHashMap<>();
-        Type containerSyncType = Type.getType(ContainerSync.class);
-        for (ModFileScanData scanData : modList.getAllScanData()) {
-            for (AnnotationData data : scanData.getAnnotations()) {
-                //If the annotation is on a field, and is the sync type
-                if (data.getTargetType() == ElementType.FIELD && containerSyncType.equals(data.getAnnotationType())) {
-                    String className = data.getClassType().getClassName();
-                    try {
-                        Class<?> annotatedClass = Class.forName(className);
-                        knownClasses.computeIfAbsent(annotatedClass, clazz -> new ArrayList<>()).add(data);
-                    } catch (ClassNotFoundException e) {
-                        Mekanism.logger.error("Failed to find class '{}'", className);
-                    }
-                }
-            }
-        }
-        Map<Class<?>, List<PropertyFieldInfo>> flatPropertyMap = new Object2ObjectOpenHashMap<>();
+    @Override
+    protected void collectScanData(Map<String, Class<?>> classNameCache, Map<Class<?>, List<AnnotationData>> knownClasses, Set<IModFileInfo> modFileData) {
+        Map<Class<?>, List<PropertyFieldInfo>> rawPropertyMap = new Object2ObjectOpenHashMap<>();
+        //Only create the list once for the default fallback
+        List<String> fallbackTagsList = Collections.singletonList(DEFAULT_TAG);
         for (Entry<Class<?>, List<AnnotationData>> entry : knownClasses.entrySet()) {
             Class<?> annotatedClass = entry.getKey();
             List<PropertyFieldInfo> propertyInfo = new ArrayList<>();
-            flatPropertyMap.put(annotatedClass, propertyInfo);
+            rawPropertyMap.put(annotatedClass, propertyInfo);
             for (AnnotationData data : entry.getValue()) {
-                String fieldName = data.getMemberName();
+                String fieldName = data.memberName();
+                Field field = getField(annotatedClass, fieldName);
+                if (field == null) {
+                    continue;
+                }
+                String getterName = getAnnotationValue(data, "getter", "");
+                PropertyField newField;
+                Class<?> fieldType = field.getType();
+                SpecialPropertyHandler<?> handler = specialProperties.stream().filter(h -> h.fieldType.isAssignableFrom(fieldType)).findFirst().orElse(null);
                 try {
-                    Field field = annotatedClass.getDeclaredField(fieldName);
-                    field.setAccessible(true);
-                    Map<String, Object> annotationData = data.getAnnotationData();
-                    String getterName = (String) annotationData.getOrDefault("getter", "");
-                    PropertyField newField;
-                    SpecialPropertyHandler<?> handler = specialProperties.stream().filter(h -> h.fieldType.isAssignableFrom(field.getType())).findFirst().orElse(null);
                     if (handler == null) {
-                        PropertyType type = PropertyType.getFromType(field.getType());
-                        String setterName = (String) annotationData.getOrDefault("setter", "");
+                        PropertyType type = PropertyType.getFromType(fieldType);
+                        String setterName = getAnnotationValue(data, "setter", "");
                         if (type != null) {
                             newField = new PropertyField(new TrackedFieldData(LambdaMetaFactoryUtil.createGetter(field, annotatedClass, getterName),
                                   LambdaMetaFactoryUtil.createSetter(field, annotatedClass, setterName), type));
-                        } else if (field.getType().isEnum()) {
+                        } else if (fieldType.isEnum()) {
                             newField = new PropertyField(new EnumFieldData(LambdaMetaFactoryUtil.createGetter(field, annotatedClass, getterName),
-                                  LambdaMetaFactoryUtil.createSetter(field, annotatedClass, setterName), field.getType()));
+                                  LambdaMetaFactoryUtil.createSetter(field, annotatedClass, setterName), fieldType));
+                        } else if (fieldType.isArray()) {
+                            Class<?> arrayFieldType = fieldType.getComponentType();
+                            PropertyType arrayType = PropertyType.getFromType(arrayFieldType);
+                            if (arrayType != null) {
+                                newField = new PropertyField(new ArrayFieldData(LambdaMetaFactoryUtil.createGetter(field, annotatedClass, getterName), arrayType));
+                            } else {
+                                Mekanism.logger.error("Attempted to sync an invalid array field '{}' in class '{}'.", fieldName, annotatedClass.getSimpleName());
+                                continue;
+                            }
                         } else {
-                            Mekanism.logger.error("Attempted to sync an invalid field '{}'", fieldName);
-                            return;
+                            Mekanism.logger.error("Attempted to sync an invalid field '{}' in class '{}'.", fieldName, annotatedClass.getSimpleName());
+                            continue;
                         }
                     } else {
                         newField = createSpecialProperty(handler, field, annotatedClass, getterName);
                     }
-                    String fullPath = annotatedClass.getName() + "#" + fieldName;
-                    if (annotationData.containsKey("tags")) {
-                        //If the annotation data has tags add them
-                        List<String> tags = (List<String>) annotationData.get("tags");
-                        for (String tag : tags) {
-                            propertyInfo.add(new PropertyFieldInfo(fullPath, tag, newField));
-                        }
-                    } else {
-                        //Otherwise fallback to the default
-                        propertyInfo.add(new PropertyFieldInfo(fullPath, DEFAULT_TAG, newField));
-                    }
-                } catch (NoSuchFieldException e) {
-                    Mekanism.logger.error("Failed to find field '{}' for class '{}'", fieldName, data.getClassType());
+                } catch (Throwable throwable) {
+                    Mekanism.logger.error("Failed to create sync data for field '{}' in class '{}'.", fieldName, annotatedClass.getSimpleName(), throwable);
+                    continue;
+                }
+                String fullPath = annotatedClass.getName() + "#" + fieldName;
+                //If the annotation data has tags add them, and otherwise fallback to the default tag
+                for (String tag : getAnnotationValue(data, "tags", fallbackTagsList)) {
+                    propertyInfo.add(new PropertyFieldInfo(fullPath, tag, newField));
                 }
             }
         }
-        Map<Class<?>, List<PropertyFieldInfo>> propertyMap = new Object2ObjectOpenHashMap<>();
-        for (Entry<Class<?>, List<PropertyFieldInfo>> entry : flatPropertyMap.entrySet()) {
-            Class<?> clazz = entry.getKey();
-            List<PropertyFieldInfo> propertyInfo = entry.getValue();
-            Class<?> current = clazz;
-            while (current.getSuperclass() != null) {
-                current = current.getSuperclass();
-                List<PropertyFieldInfo> superInfo = propertyMap.get(current);
-                if (superInfo != null) {
-                    //If we already have an overall cache for the super class, add from it and break out of checking super classes
-                    propertyInfo.addAll(superInfo);
-                    break;
-                }
-                //Otherwise continue building up the cache, collecting all the class names up to the root superclass
-                superInfo = flatPropertyMap.get(current);
-                if (superInfo != null) {
-                    //If the property map has the super class, grab the fields that correspond to it
-                    //Note: We keep going here as it may have super classes higher up
-                    propertyInfo.addAll(superInfo);
-                }
-            }
-            propertyMap.put(clazz, propertyInfo);
-        }
-        List<ClassPropertyFieldInfo> flatPropertyMapInfo = propertyMap.entrySet().stream().map(entry -> new ClassPropertyFieldInfo(entry.getKey(), entry.getValue()))
-              .sorted(Comparator.comparing(info -> info.className)).collect(Collectors.toList());
-        for (ClassPropertyFieldInfo classPropertyInfo : flatPropertyMapInfo) {
+        List<ClassBasedInfo<PropertyFieldInfo>> propertyMap = combineWithParents(rawPropertyMap);
+        for (ClassBasedInfo<PropertyFieldInfo> classPropertyInfo : propertyMap) {
             PropertyDataClassCache cache = new PropertyDataClassCache();
-            classPropertyInfo.propertyFields.sort(Comparator.comparing(info -> info.fieldPath + "|" + info.tag));
-            for (PropertyFieldInfo field : classPropertyInfo.propertyFields) {
+            classPropertyInfo.infoList().sort(Comparator.comparing(info -> info.fieldPath + "|" + info.tag));
+            for (PropertyFieldInfo field : classPropertyInfo.infoList()) {
                 cache.propertyFieldMap.put(field.tag, field.field);
             }
-            syncablePropertyMap.put(classPropertyInfo.clazz, cache);
+            syncablePropertyMap.put(classPropertyInfo.clazz(), cache);
         }
     }
 
-    public static void setup(MekanismContainer container, Class<?> holderClass, Supplier<Object> holderSupplier) {
+    public void setup(MekanismContainer container, Class<?> holderClass, Supplier<Object> holderSupplier) {
         setup(container, holderClass, holderSupplier, DEFAULT_TAG);
     }
 
-    public static void setup(MekanismContainer container, Class<?> holderClass, Supplier<Object> holderSupplier, String tag) {
-        PropertyDataClassCache cache = syncablePropertyMap.computeIfAbsent(holderClass, SyncMapper::buildSyncMap);
+    public void setup(MekanismContainer container, Class<?> holderClass, Supplier<Object> holderSupplier, String tag) {
+        PropertyDataClassCache cache = syncablePropertyMap.computeIfAbsent(holderClass, clazz -> getData(syncablePropertyMap, clazz, PropertyDataClassCache.EMPTY));
         for (PropertyField field : cache.propertyFieldMap.get(tag)) {
             for (TrackedFieldData data : field.trackedData) {
-                container.track(data.createSyncableData(holderSupplier));
+                data.track(container, holderSupplier);
             }
         }
-    }
-
-    private static PropertyDataClassCache buildSyncMap(Class<?> clazz) {
-        PropertyDataClassCache cache = new PropertyDataClassCache();
-        Class<?> current = clazz;
-        while (current.getSuperclass() != null) {
-            current = current.getSuperclass();
-            PropertyDataClassCache superCache = syncablePropertyMap.get(current);
-            if (superCache != null) {
-                //If we already have an overall cache for the super class, add from it and break out of checking super classes
-                cache.propertyFieldMap.putAll(superCache.propertyFieldMap);
-                break;
-            }
-            //Otherwise continue going up to the root superclass
-        }
-        return cache;
     }
 
     private static <O> PropertyField createSpecialProperty(SpecialPropertyHandler<O> handler, Field field, Class<?> objType, String getterName) throws Throwable {
         PropertyField ret = new PropertyField();
+        // create a getter for the actual property field itself
+        Function<Object, O> fieldGetter = LambdaMetaFactoryUtil.createGetter(field, objType, getterName);
         for (SpecialPropertyData<O> data : handler.specialData) {
-            // create a getter for the actual property field itself
-            Function<Object, O> fieldGetter = LambdaMetaFactoryUtil.createGetter(field, objType, getterName);
             // create a new tracked field
             TrackedFieldData trackedField = TrackedFieldData.create(data.propertyType, obj -> data.get(fieldGetter.apply(obj)), (obj, val) -> data.set(fieldGetter.apply(obj), val));
             if (trackedField != null) {
@@ -247,6 +203,8 @@ public class SyncMapper {
 
     private static class PropertyDataClassCache {
 
+        private static final PropertyDataClassCache EMPTY = new PropertyDataClassCache();
+
         //Note: This needs to be a linked map to ensure that the order is preserved
         private final Multimap<String, PropertyField> propertyFieldMap = LinkedHashMultimap.create();
     }
@@ -256,7 +214,7 @@ public class SyncMapper {
         private final List<TrackedFieldData> trackedData = new ArrayList<>();
 
         private PropertyField(TrackedFieldData... data) {
-            trackedData.addAll(Arrays.asList(data));
+            Collections.addAll(trackedData, data);
         }
 
         private void addTrackedData(TrackedFieldData data) {
@@ -280,6 +238,10 @@ public class SyncMapper {
             this.propertyType = propertyType;
         }
 
+        protected void track(MekanismContainer container, Supplier<Object> holderSupplier) {
+            container.track(createSyncableData(holderSupplier));
+        }
+
         protected Object get(Object dataObj) {
             return getter.apply(dataObj);
         }
@@ -292,7 +254,7 @@ public class SyncMapper {
             return create(() -> {
                 Object dataObj = obj.get();
                 return dataObj == null ? getDefault() : get(dataObj);
-            }, (val) -> {
+            }, val -> {
                 Object dataObj = obj.get();
                 if (dataObj != null) {
                     set(dataObj, val);
@@ -311,6 +273,15 @@ public class SyncMapper {
         protected static TrackedFieldData create(Class<?> propertyType, Function<Object, Object> getter, BiConsumer<Object, Object> setter) {
             if (propertyType.isEnum()) {
                 return new EnumFieldData(getter, setter, propertyType);
+            } else if (propertyType.isArray()) {
+                Class<?> arrayType = propertyType.getComponentType();
+                //Note: We don't support arrays of arrays
+                PropertyType type = PropertyType.getFromType(arrayType);
+                if (type == null) {
+                    Mekanism.logger.error("Tried to create property data for invalid array type '{}'.", arrayType.getName());
+                    return null;
+                }
+                return new ArrayFieldData(getter, type);
             }
             PropertyType type = PropertyType.getFromType(propertyType);
             if (type == null) {
@@ -336,7 +307,7 @@ public class SyncMapper {
         }
 
         protected <ENUM extends Enum<ENUM>> ISyncableData createData(ENUM[] constants, Supplier<Object> getter, Consumer<Object> setter) {
-            return SyncableEnum.create((val) -> constants[val], constants[0], () -> (ENUM) getter.get(), setter::accept);
+            return SyncableEnum.create(val -> constants[val], constants[0], () -> (ENUM) getter.get(), setter::accept);
         }
 
         @Override
@@ -345,15 +316,63 @@ public class SyncMapper {
         }
     }
 
+    //Assumes length of array is constant regardless of holder implementation
+    protected static class ArrayFieldData extends TrackedFieldData {
+
+        protected ArrayFieldData(Function<Object, Object> getter, PropertyType propertyType) {
+            super(getter, null, propertyType);
+        }
+
+        @Override
+        protected void track(MekanismContainer container, Supplier<Object> holderSupplier) {
+            Object holder = holderSupplier.get();
+            if (holder != null) {
+                //Try to get the current holder
+                Object field = get(holder);
+                if (field.getClass().isArray()) {
+                    //Validate the field is an array
+                    int length = Array.getLength(field);
+                    for (int i = 0; i < length; i++) {
+                        int index = i;
+                        //For each element in the array, add a tracker for it
+                        container.track(create(() -> {
+                            Object obj = holderSupplier.get();
+                            return obj == null ? getDefault() : Array.get(get(obj), index);
+                        }, value -> {
+                            Object obj = holderSupplier.get();
+                            if (obj != null) {
+                                Array.set(get(obj), index, value);
+                            }
+                        }));
+                    }
+                } else {
+                    Mekanism.logger.error("Unexpected field type '{}' is not an array.", field.getClass());
+                }
+            } else {
+                Mekanism.logger.error("Unable to get holder object to add array tracker to.");
+            }
+        }
+
+        @Override
+        protected void set(Object dataObj, Object value) {
+            throw new UnsupportedOperationException("Unsupported, uses overridden.");
+        }
+
+        @Override
+        protected ISyncableData createSyncableData(Supplier<Object> obj) {
+            throw new UnsupportedOperationException("Unsupported, uses overridden.");
+        }
+    }
+
     private static class SpecialPropertyHandler<O> {
 
         private final Class<O> fieldType;
-        private final List<SpecialPropertyData<O>> specialData = new ArrayList<>();
+        private final List<SpecialPropertyData<O>> specialData;
 
         @SafeVarargs
         private SpecialPropertyHandler(Class<O> fieldType, SpecialPropertyData<O>... data) {
             this.fieldType = fieldType;
-            specialData.addAll(Arrays.asList(data));
+            specialData = List.of(data);
         }
     }
 
@@ -383,29 +402,6 @@ public class SyncMapper {
         }
     }
 
-    private static class ClassPropertyFieldInfo {
-
-        private final Class<?> clazz;
-        private final String className;
-        private final List<PropertyFieldInfo> propertyFields;
-
-        private ClassPropertyFieldInfo(Class<?> clazz, List<PropertyFieldInfo> propertyFields) {
-            this.clazz = clazz;
-            this.className = clazz.getName();
-            this.propertyFields = propertyFields;
-        }
-    }
-
-    private static class PropertyFieldInfo {
-
-        private final PropertyField field;
-        private final String fieldPath;
-        private final String tag;
-
-        private PropertyFieldInfo(String fieldPath, String tag, PropertyField field) {
-            this.fieldPath = fieldPath;
-            this.field = field;
-            this.tag = tag;
-        }
+    private record PropertyFieldInfo(String fieldPath, String tag, PropertyField field) {
     }
 }
