@@ -1,103 +1,154 @@
 package mekanism.common.item.gear;
 
+import com.google.common.collect.ImmutableMultimap;
+import com.google.common.collect.Multimap;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import java.util.function.Consumer;
-import javax.annotation.Nonnull;
 import mekanism.api.Action;
+import mekanism.api.AutomationType;
+import mekanism.api.NBTConstants;
 import mekanism.api.chemical.gas.Gas;
 import mekanism.api.chemical.gas.GasStack;
 import mekanism.api.chemical.gas.IGasHandler;
 import mekanism.api.energy.IEnergyContainer;
-import mekanism.api.inventory.AutomationType;
+import mekanism.api.functions.FloatSupplier;
+import mekanism.api.gear.ICustomModule;
+import mekanism.api.gear.ICustomModule.ModuleDamageAbsorbInfo;
+import mekanism.api.gear.IModule;
+import mekanism.api.gear.ModuleData.ExclusiveFlag;
 import mekanism.api.math.FloatingLong;
+import mekanism.api.math.FloatingLongSupplier;
 import mekanism.api.text.EnumColor;
-import mekanism.api.text.ILangEntry;
-import mekanism.client.MekKeyHandler;
-import mekanism.client.MekanismKeyHandler;
-import mekanism.client.render.armor.CustomArmor;
-import mekanism.client.render.armor.MekaSuitArmor;
+import mekanism.client.key.MekKeyHandler;
+import mekanism.client.key.MekanismKeyHandler;
+import mekanism.client.render.RenderPropertiesProvider;
 import mekanism.common.Mekanism;
 import mekanism.common.MekanismLang;
 import mekanism.common.capabilities.Capabilities;
-import mekanism.common.capabilities.ItemCapabilityWrapper;
+import mekanism.common.capabilities.ItemCapabilityWrapper.ItemCapability;
+import mekanism.common.capabilities.chemical.item.ChemicalTankSpec;
 import mekanism.common.capabilities.chemical.item.RateLimitMultiTankGasHandler;
-import mekanism.common.capabilities.chemical.item.RateLimitMultiTankGasHandler.GasTankSpec;
 import mekanism.common.capabilities.energy.BasicEnergyContainer;
 import mekanism.common.capabilities.energy.item.RateLimitEnergyHandler;
+import mekanism.common.capabilities.fluid.item.RateLimitMultiTankFluidHandler;
+import mekanism.common.capabilities.fluid.item.RateLimitMultiTankFluidHandler.FluidTankSpec;
+import mekanism.common.capabilities.laser.item.LaserDissipationHandler;
 import mekanism.common.capabilities.radiation.item.RadiationShieldingHandler;
 import mekanism.common.config.MekanismConfig;
-import mekanism.common.content.gear.HUDElement;
+import mekanism.common.config.value.CachedIntValue;
 import mekanism.common.content.gear.IModuleContainerItem;
 import mekanism.common.content.gear.Module;
-import mekanism.common.content.gear.Modules;
+import mekanism.common.content.gear.mekasuit.ModuleJetpackUnit;
 import mekanism.common.content.gear.shared.ModuleEnergyUnit;
+import mekanism.common.item.interfaces.IJetpackItem;
 import mekanism.common.item.interfaces.IModeItem;
-import mekanism.common.item.interfaces.ISpecialGear;
+import mekanism.common.lib.attribute.AttributeCache;
+import mekanism.common.lib.attribute.IAttributeRefresher;
+import mekanism.common.registries.MekanismFluids;
 import mekanism.common.registries.MekanismGases;
+import mekanism.common.registries.MekanismModules;
+import mekanism.common.util.ChemicalUtil;
+import mekanism.common.util.ItemDataUtils;
 import mekanism.common.util.MekanismUtils;
 import mekanism.common.util.StorageUtils;
-import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.monster.EndermanEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.inventory.EquipmentSlotType;
-import net.minecraft.item.ArmorItem;
-import net.minecraft.item.ItemGroup;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Rarity;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.NonNullList;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.world.World;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.common.capabilities.ICapabilityProvider;
+import net.minecraft.core.NonNullList;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.Tag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.ai.attributes.Attribute;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier.Operation;
+import net.minecraft.world.entity.ai.attributes.Attributes;
+import net.minecraft.world.entity.monster.EnderMan;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.CreativeModeTab;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Rarity;
+import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.enchantment.Enchantment;
+import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.gameevent.GameEvent;
+import net.minecraftforge.client.extensions.common.IClientItemExtensions;
+import net.minecraftforge.fluids.FluidStack;
+import net.minecraftforge.fluids.FluidUtil;
+import net.minecraftforge.fluids.capability.IFluidHandlerItem;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-public class ItemMekaSuitArmor extends ArmorItem implements IModuleContainerItem, IModeItem, ISpecialGear {
+public class ItemMekaSuitArmor extends ItemSpecialArmor implements IModuleContainerItem, IModeItem, IJetpackItem, IAttributeRefresher {
 
-    // TODO separate these into individual modules maybe (specifically fire-related - on_fire, in_fire, lava)
-    private static final Set<DamageSource> ALWAYS_SUPPORTED_SOURCES = new HashSet<>(Arrays.asList(
-          DamageSource.ANVIL, DamageSource.CACTUS, DamageSource.CRAMMING, DamageSource.DRAGON_BREATH, DamageSource.DRYOUT,
+    private static final Set<DamageSource> ALWAYS_SUPPORTED_SOURCES = new LinkedHashSet<>(List.of(
+          DamageSource.ANVIL, DamageSource.CACTUS, DamageSource.CRAMMING, DamageSource.DRAGON_BREATH, DamageSource.DRY_OUT,
           DamageSource.FALL, DamageSource.FALLING_BLOCK, DamageSource.FLY_INTO_WALL, DamageSource.GENERIC,
           DamageSource.HOT_FLOOR, DamageSource.IN_FIRE, DamageSource.IN_WALL, DamageSource.LAVA, DamageSource.LIGHTNING_BOLT,
-          DamageSource.ON_FIRE, DamageSource.SWEET_BERRY_BUSH, DamageSource.WITHER));
+          DamageSource.ON_FIRE, DamageSource.SWEET_BERRY_BUSH, DamageSource.WITHER, DamageSource.FREEZE, DamageSource.FALLING_STALACTITE,
+          DamageSource.STALAGMITE));
+
+    public static Set<DamageSource> getSupportedSources() {
+        return Collections.unmodifiableSet(ALWAYS_SUPPORTED_SOURCES);
+    }
 
     private static final MekaSuitMaterial MEKASUIT_MATERIAL = new MekaSuitMaterial();
-    //TODO: Make this a config option?
-    private static final int GAS_TRANSFER_RATE = 256;
-    public static final int MAX_JETPACK_FUEL = 24_000;
-    public static final int MAX_NUTRITIONAL_PASTE = 16_000;
 
-    private final Set<GasTankSpec> gasTankSpecs = new HashSet<>();
-    private float absorption;
+    private final AttributeCache attributeCache;
+    //TODO: Expand this system so that modules can maybe define needed tanks?
+    private final List<ChemicalTankSpec<Gas>> gasTankSpecs = new ArrayList<>();
+    private final List<ChemicalTankSpec<Gas>> gasTankSpecsView = Collections.unmodifiableList(gasTankSpecs);
+    private final List<FluidTankSpec> fluidTankSpecs = new ArrayList<>();
+    private final List<FluidTankSpec> fluidTankSpecsView = Collections.unmodifiableList(fluidTankSpecs);
+    private final float absorption;
+    //Full laser dissipation causes 3/4 of the energy to be dissipated and the remaining energy to be refracted
+    private final double laserDissipation;
+    private final double laserRefraction;
 
-    public ItemMekaSuitArmor(EquipmentSlotType slot, Properties properties) {
-        super(MEKASUIT_MATERIAL, slot, properties.rarity(Rarity.EPIC).setNoRepair().maxStackSize(1));
-        Modules.setSupported(this, Modules.ENERGY_UNIT, Modules.RADIATION_SHIELDING_UNIT);
-
-        if (slot == EquipmentSlotType.HEAD) {
-            Modules.setSupported(this, Modules.ELECTROLYTIC_BREATHING_UNIT, Modules.INHALATION_PURIFICATION_UNIT, Modules.VISION_ENHANCEMENT_UNIT,
-                  Modules.SOLAR_RECHARGING_UNIT, Modules.NUTRITIONAL_INJECTION_UNIT);
-            gasTankSpecs.add(GasTankSpec.createFillOnly(() -> GAS_TRANSFER_RATE, () -> MAX_NUTRITIONAL_PASTE, gas -> gas == MekanismGases.NUTRITIONAL_PASTE.get()));
+    public ItemMekaSuitArmor(EquipmentSlot slot, Properties properties) {
+        super(MEKASUIT_MATERIAL, slot, properties.rarity(Rarity.EPIC).setNoRepair().stacksTo(1));
+        CachedIntValue armorConfig;
+        if (slot == EquipmentSlot.HEAD) {
+            fluidTankSpecs.add(FluidTankSpec.createFillOnly(MekanismConfig.gear.mekaSuitNutritionalTransferRate, MekanismConfig.gear.mekaSuitNutritionalMaxStorage,
+                  fluid -> fluid.getFluid() == MekanismFluids.NUTRITIONAL_PASTE.getFluid(), stack -> hasModule(stack, MekanismModules.NUTRITIONAL_INJECTION_UNIT)));
             absorption = 0.15F;
-        } else if (slot == EquipmentSlotType.CHEST) {
-            Modules.setSupported(this, Modules.JETPACK_UNIT, Modules.GRAVITATIONAL_MODULATING_UNIT, Modules.CHARGE_DISTRIBUTION_UNIT, Modules.DOSIMETER_UNIT);
-            gasTankSpecs.add(GasTankSpec.createFillOnly(() -> GAS_TRANSFER_RATE, () -> MAX_JETPACK_FUEL, gas -> gas == MekanismGases.HYDROGEN.get()));
+            laserDissipation = 0.15;
+            laserRefraction = 0.2;
+            armorConfig = MekanismConfig.gear.mekaSuitHelmetArmor;
+        } else if (slot == EquipmentSlot.CHEST) {
+            gasTankSpecs.add(ChemicalTankSpec.createFillOnly(MekanismConfig.gear.mekaSuitJetpackTransferRate, MekanismConfig.gear.mekaSuitJetpackMaxStorage,
+                  gas -> gas == MekanismGases.HYDROGEN.get(), stack -> hasModule(stack, MekanismModules.JETPACK_UNIT)));
             absorption = 0.4F;
-        } else if (slot == EquipmentSlotType.LEGS) {
-            Modules.setSupported(this, Modules.LOCOMOTIVE_BOOSTING_UNIT);
+            laserDissipation = 0.3;
+            laserRefraction = 0.4;
+            armorConfig = MekanismConfig.gear.mekaSuitBodyArmorArmor;
+        } else if (slot == EquipmentSlot.LEGS) {
             absorption = 0.3F;
-        } else if (slot == EquipmentSlotType.FEET) {
-            Modules.setSupported(this, Modules.HYDRAULIC_PROPULSION_UNIT, Modules.MAGNETIC_ATTRACTION_UNIT);
+            laserDissipation = 0.1875;
+            laserRefraction = 0.25;
+            armorConfig = MekanismConfig.gear.mekaSuitPantsArmor;
+        } else if (slot == EquipmentSlot.FEET) {
             absorption = 0.15F;
+            laserDissipation = 0.1125;
+            laserRefraction = 0.15;
+            armorConfig = MekanismConfig.gear.mekaSuitBootsArmor;
+        } else {
+            throw new IllegalArgumentException("Unknown Equipment Slot Type");
         }
+        this.attributeCache = new AttributeCache(this, armorConfig, MekanismConfig.gear.mekaSuitToughness, MekanismConfig.gear.mekaSuitKnockbackResistance);
+    }
+
+    @Override
+    public void initializeClient(@NotNull Consumer<IClientItemExtensions> consumer) {
+        consumer.accept(RenderPropertiesProvider.mekaSuit());
     }
 
     @Override
@@ -107,90 +158,121 @@ public class ItemMekaSuitArmor extends ArmorItem implements IModuleContainerItem
     }
 
     @Override
-    @OnlyIn(Dist.CLIENT)
-    public void addInformation(@Nonnull ItemStack stack, World world, @Nonnull List<ITextComponent> tooltip, @Nonnull ITooltipFlag flag) {
-        if (MekKeyHandler.getIsKeyPressed(MekanismKeyHandler.detailsKey)) {
-            for (Module module : Modules.loadAll(stack)) {
-                ILangEntry langEntry = module.getData().getLangEntry();
-                if (module.getInstalledCount() > 1) {
-                    ITextComponent amount = MekanismLang.GENERIC_FRACTION.translate(module.getInstalledCount(), module.getData().getMaxStackSize());
-                    tooltip.add(MekanismLang.GENERIC_WITH_PARENTHESIS.translateColored(EnumColor.GRAY, langEntry, amount));
-                } else {
-                    tooltip.add(langEntry.translateColored(EnumColor.GRAY));
-                }
-            }
+    public void appendHoverText(@NotNull ItemStack stack, Level world, @NotNull List<Component> tooltip, @NotNull TooltipFlag flag) {
+        if (MekKeyHandler.isKeyPressed(MekanismKeyHandler.detailsKey)) {
+            addModuleDetails(stack, tooltip);
         } else {
             StorageUtils.addStoredEnergy(stack, tooltip, true);
             if (!gasTankSpecs.isEmpty()) {
                 StorageUtils.addStoredGas(stack, tooltip, true, false);
             }
-            tooltip.add(MekanismLang.HOLD_FOR_MODULES.translateColored(EnumColor.GRAY, EnumColor.INDIGO, MekanismKeyHandler.detailsKey.func_238171_j_()));
+            if (!fluidTankSpecs.isEmpty()) {
+                StorageUtils.addStoredFluid(stack, tooltip, true);
+            }
+            tooltip.add(MekanismLang.HOLD_FOR_MODULES.translateColored(EnumColor.GRAY, EnumColor.INDIGO, MekanismKeyHandler.detailsKey.getTranslatedKeyMessage()));
         }
     }
 
     @Override
-    public boolean makesPiglinsNeutral(@Nonnull ItemStack stack, @Nonnull LivingEntity wearer) {
+    public boolean makesPiglinsNeutral(@NotNull ItemStack stack, @NotNull LivingEntity wearer) {
         return true;
     }
 
     @Override
-    public boolean isEnderMask(@Nonnull ItemStack stack, @Nonnull PlayerEntity player, @Nonnull EndermanEntity enderman) {
-        return getEquipmentSlot() == EquipmentSlotType.HEAD;
+    public boolean isEnderMask(@NotNull ItemStack stack, @NotNull Player player, @NotNull EnderMan enderman) {
+        return getSlot() == EquipmentSlot.HEAD;
     }
 
     @Override
-    public boolean showDurabilityBar(ItemStack stack) {
+    public boolean canWalkOnPowderedSnow(@NotNull ItemStack stack, @NotNull LivingEntity wearer) {
+        return getSlot() == EquipmentSlot.FEET;
+    }
+
+    @Override
+    public boolean isBarVisible(@NotNull ItemStack stack) {
         return true;
     }
 
     @Override
-    public double getDurabilityForDisplay(ItemStack stack) {
-        //TODO: Eventually look into making it so that we can have a "secondary durability" bar for rendering things like stored gas
-        return StorageUtils.getEnergyDurabilityForDisplay(stack);
+    public int getBarWidth(@NotNull ItemStack stack) {
+        return StorageUtils.getEnergyBarWidth(stack);
     }
 
     @Override
-    public int getRGBDurabilityForDisplay(ItemStack stack) {
+    public int getBarColor(@NotNull ItemStack stack) {
         return MekanismConfig.client.energyColor.get();
     }
 
     @Override
-    public void fillItemGroup(@Nonnull ItemGroup group, @Nonnull NonNullList<ItemStack> items) {
-        super.fillItemGroup(group, items);
-        if (isInGroup(group)) {
+    public boolean isNotReplaceableByPickAction(ItemStack stack, Player player, int inventorySlot) {
+        //Try to avoid replacing this item if there are any modules currently installed
+        return super.isNotReplaceableByPickAction(stack, player, inventorySlot) || ItemDataUtils.hasData(stack, NBTConstants.MODULES, Tag.TAG_COMPOUND);
+    }
+
+    @Override
+    public int getEnchantmentLevel(ItemStack stack, Enchantment enchantment) {
+        if (stack.isEmpty()) {
+            return 0;
+        }
+        //Enchantments in our data
+        ListTag enchantments = ItemDataUtils.getList(stack, NBTConstants.ENCHANTMENTS);
+        return Math.max(MekanismUtils.getEnchantmentLevel(enchantments, enchantment), super.getEnchantmentLevel(stack, enchantment));
+    }
+
+    @Override
+    public Map<Enchantment, Integer> getAllEnchantments(ItemStack stack) {
+        Map<Enchantment, Integer> enchantments = EnchantmentHelper.deserializeEnchantments(ItemDataUtils.getList(stack, NBTConstants.ENCHANTMENTS));
+        super.getAllEnchantments(stack).forEach((enchantment, level) -> enchantments.merge(enchantment, level, Math::max));
+        return enchantments;
+    }
+
+    @Override
+    public void fillItemCategory(@NotNull CreativeModeTab group, @NotNull NonNullList<ItemStack> items) {
+        super.fillItemCategory(group, items);
+        if (allowedIn(group)) {
             ItemStack stack = new ItemStack(this);
             items.add(StorageUtils.getFilledEnergyVariant(stack, getMaxEnergy(stack)));
         }
     }
 
     @Override
-    public void onArmorTick(ItemStack stack, World world, PlayerEntity player) {
+    public void onArmorTick(ItemStack stack, Level world, Player player) {
         super.onArmorTick(stack, world, player);
-        for (Module module : Modules.loadAll(stack)) {
+        for (Module<?> module : getModules(stack)) {
             module.tick(player);
         }
     }
 
     @Override
-    public ICapabilityProvider initCapabilities(ItemStack stack, CompoundNBT nbt) {
-        if (stack.getTag() == null) {
-            stack.setTag(new CompoundNBT());
-        }
-        stack.getTag().putInt("HideFlags", 2);
+    protected void gatherCapabilities(List<ItemCapability> capabilities, ItemStack stack, CompoundTag nbt) {
+        super.gatherCapabilities(capabilities, stack, nbt);
         //Note: We interact with this capability using "manual" as the automation type, to ensure we can properly bypass the energy limit for extracting
         // Internal is used by the "null" side, which is what will get used for most items
-        ItemCapabilityWrapper wrapper = new ItemCapabilityWrapper(stack, RateLimitEnergyHandler.create(() -> getChargeRate(stack), () -> getMaxEnergy(stack),
-              BasicEnergyContainer.manualOnly, BasicEnergyContainer.alwaysTrue),
-              RadiationShieldingHandler.create(item -> isModuleEnabled(item, Modules.RADIATION_SHIELDING_UNIT) ? ItemHazmatSuitArmor.getShieldingByArmor(slot) : 0));
+        capabilities.add(RateLimitEnergyHandler.create(() -> getChargeRate(stack), () -> getMaxEnergy(stack), BasicEnergyContainer.manualOnly,
+              BasicEnergyContainer.alwaysTrue));
+        capabilities.add(RadiationShieldingHandler.create(item -> isModuleEnabled(item, MekanismModules.RADIATION_SHIELDING_UNIT) ?
+                                                                  ItemHazmatSuitArmor.getShieldingByArmor(slot) : 0));
+        capabilities.add(LaserDissipationHandler.create(item -> isModuleEnabled(item, MekanismModules.LASER_DISSIPATION_UNIT) ? laserDissipation : 0,
+              item -> isModuleEnabled(item, MekanismModules.LASER_DISSIPATION_UNIT) ? laserRefraction : 0));
         if (!gasTankSpecs.isEmpty()) {
-            wrapper.add(RateLimitMultiTankGasHandler.create(gasTankSpecs));
+            capabilities.add(RateLimitMultiTankGasHandler.create(gasTankSpecs));
         }
-        return wrapper;
+        if (!fluidTankSpecs.isEmpty()) {
+            capabilities.add(RateLimitMultiTankFluidHandler.create(fluidTankSpecs));
+        }
     }
 
-    @Nonnull
+    public List<ChemicalTankSpec<Gas>> getGasTankSpecs() {
+        return gasTankSpecsView;
+    }
+
+    public List<FluidTankSpec> getFluidTankSpecs() {
+        return fluidTankSpecsView;
+    }
+
+    @NotNull
     public GasStack useGas(ItemStack stack, Gas type, long amount) {
-        Optional<IGasHandler> capability = MekanismUtils.toOptional(stack.getCapability(Capabilities.GAS_HANDLER_CAPABILITY));
+        Optional<IGasHandler> capability = stack.getCapability(Capabilities.GAS_HANDLER).resolve();
         if (capability.isPresent()) {
             IGasHandler gasHandlerItem = capability.get();
             return gasHandlerItem.extractChemical(new GasStack(type, amount), Action.EXECUTE);
@@ -199,7 +281,7 @@ public class ItemMekaSuitArmor extends ArmorItem implements IModuleContainerItem
     }
 
     public GasStack getContainedGas(ItemStack stack, Gas type) {
-        Optional<IGasHandler> capability = MekanismUtils.toOptional(stack.getCapability(Capabilities.GAS_HANDLER_CAPABILITY));
+        Optional<IGasHandler> capability = stack.getCapability(Capabilities.GAS_HANDLER).resolve();
         if (capability.isPresent()) {
             IGasHandler gasHandlerItem = capability.get();
             for (int i = 0; i < gasHandlerItem.getTanks(); i++) {
@@ -212,9 +294,23 @@ public class ItemMekaSuitArmor extends ArmorItem implements IModuleContainerItem
         return GasStack.EMPTY;
     }
 
+    public FluidStack getContainedFluid(ItemStack stack, FluidStack type) {
+        Optional<IFluidHandlerItem> capability = FluidUtil.getFluidHandler(stack).resolve();
+        if (capability.isPresent()) {
+            IFluidHandlerItem fluidHandlerItem = capability.get();
+            for (int i = 0; i < fluidHandlerItem.getTanks(); i++) {
+                FluidStack fluidInTank = fluidHandlerItem.getFluidInTank(i);
+                if (fluidInTank.isFluidEqual(type)) {
+                    return fluidInTank;
+                }
+            }
+        }
+        return FluidStack.EMPTY;
+    }
+
     @Override
-    public void changeMode(@Nonnull PlayerEntity player, @Nonnull ItemStack stack, int shift, boolean displayChangeMessage) {
-        for (Module module : Modules.loadAll(stack)) {
+    public void changeMode(@NotNull Player player, @NotNull ItemStack stack, int shift, boolean displayChangeMessage) {
+        for (Module<?> module : getModules(stack)) {
             if (module.handlesModeChange()) {
                 module.changeMode(player, stack, shift, displayChangeMessage);
                 return;
@@ -223,91 +319,271 @@ public class ItemMekaSuitArmor extends ArmorItem implements IModuleContainerItem
     }
 
     @Override
-    public boolean supportsSlotType(ItemStack stack, @Nonnull EquipmentSlotType slotType) {
-        return slotType == getEquipmentSlot() && Modules.loadAll(stack).stream().anyMatch(Module::handlesModeChange);
+    public boolean supportsSlotType(ItemStack stack, @NotNull EquipmentSlot slotType) {
+        //Note: We ignore radial modes as those are just for the Meka-Tool currently
+        return slotType == getSlot() && getModules(stack).stream().anyMatch(Module::handlesModeChange);
     }
 
     @Override
-    public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlotType slot, String type) {
-        return "mekanism:render/null_armor.png";
-    }
-
-    @Nonnull
-    @Override
-    @OnlyIn(Dist.CLIENT)
-    public CustomArmor getGearModel() {
-        switch (getEquipmentSlot()) {
-            case HEAD:
-                return MekaSuitArmor.HELMET;
-            case CHEST:
-                return MekaSuitArmor.BODYARMOR;
-            case LEGS:
-                return MekaSuitArmor.PANTS;
-            default:
-                return MekaSuitArmor.BOOTS;
+    public boolean canElytraFly(ItemStack stack, LivingEntity entity) {
+        if (slot == EquipmentSlot.CHEST && !entity.isShiftKeyDown()) {
+            //Don't allow elytra flight if the player is sneaking. This lets the player exit elytra flight early
+            IModule<?> module = getModule(stack, MekanismModules.ELYTRA_UNIT);
+            if (module != null && module.isEnabled() && module.canUseEnergy(entity, MekanismConfig.gear.mekaSuitElytraEnergyUsage.get())) {
+                //If we can use the elytra, check if the jetpack unit is also installed, and if it is,
+                // only mark that we can use the elytra if the jetpack is not set to hover or if it is if it has no hydrogen stored
+                IModule<ModuleJetpackUnit> jetpack = getModule(stack, MekanismModules.JETPACK_UNIT);
+                return jetpack == null || !jetpack.isEnabled() || jetpack.getCustomInstance().getMode() != JetpackMode.HOVER ||
+                       getContainedGas(stack, MekanismGases.HYDROGEN.get()).isEmpty();
+            }
         }
+        return false;
+    }
+
+    @Override
+    public boolean elytraFlightTick(ItemStack stack, LivingEntity entity, int flightTicks) {
+        //Note: As canElytraFly is checked just before this we don't bother validating ahead of time we have the energy
+        // or that we are the correct slot
+        if (!entity.level.isClientSide) {
+            int nextFlightTicks = flightTicks + 1;
+            if (nextFlightTicks % 10 == 0) {
+                if (nextFlightTicks % 20 == 0) {
+                    IModule<?> module = getModule(stack, MekanismModules.ELYTRA_UNIT);
+                    if (module != null && module.isEnabled()) {
+                        module.useEnergy(entity, MekanismConfig.gear.mekaSuitElytraEnergyUsage.get());
+                    }
+                }
+                entity.gameEvent(GameEvent.ELYTRA_GLIDE);
+            }
+        }
+        return true;
+    }
+
+    @Override
+    public boolean canUseJetpack(ItemStack stack) {
+        return slot == EquipmentSlot.CHEST && (isModuleEnabled(stack, MekanismModules.JETPACK_UNIT) ? ChemicalUtil.hasChemical(stack, MekanismGases.HYDROGEN.get()) :
+                                               getModules(stack).stream().anyMatch(module -> module.isEnabled() && module.getData().isExclusive(ExclusiveFlag.OVERRIDE_JUMP.getMask())));
+    }
+
+    @Override
+    public JetpackMode getJetpackMode(ItemStack stack) {
+        IModule<ModuleJetpackUnit> module = getModule(stack, MekanismModules.JETPACK_UNIT);
+        if (module != null && module.isEnabled()) {
+            return module.getCustomInstance().getMode();
+        }
+        return JetpackMode.DISABLED;
+    }
+
+    @Override
+    public void useJetpackFuel(ItemStack stack) {
+        useGas(stack, MekanismGases.HYDROGEN.get(), 1);
     }
 
     private FloatingLong getMaxEnergy(ItemStack stack) {
-        ModuleEnergyUnit module = Modules.load(stack, Modules.ENERGY_UNIT);
-        return module != null ? module.getEnergyCapacity() : MekanismConfig.gear.mekaToolBaseEnergyCapacity.get();
+        IModule<ModuleEnergyUnit> module = getModule(stack, MekanismModules.ENERGY_UNIT);
+        return module == null ? MekanismConfig.gear.mekaSuitBaseEnergyCapacity.get() : module.getCustomInstance().getEnergyCapacity(module);
     }
 
     private FloatingLong getChargeRate(ItemStack stack) {
-        ModuleEnergyUnit module = Modules.load(stack, Modules.ENERGY_UNIT);
-        return module != null ? module.getChargeRate() : MekanismConfig.gear.mekaToolBaseChargeRate.get();
+        IModule<ModuleEnergyUnit> module = getModule(stack, MekanismModules.ENERGY_UNIT);
+        return module == null ? MekanismConfig.gear.mekaSuitBaseChargeRate.get() : module.getCustomInstance().getChargeRate(module);
     }
 
-    public float getDamageAbsorbed(ItemStack stack, DamageSource source, float amount) {
-        // don't handle magic as it's handled by inhalation purification
-        // don't handle starving as player should have nutritional injection
-        // don't handle out of world (ever)
-        if (!ALWAYS_SUPPORTED_SOURCES.contains(source) && source.isUnblockable()) {
+    @NotNull
+    @Override
+    public Multimap<Attribute, AttributeModifier> getAttributeModifiers(@NotNull EquipmentSlot slot, @NotNull ItemStack stack) {
+        return slot == getSlot() ? attributeCache.get() : ImmutableMultimap.of();
+    }
+
+    @Override
+    public void addToBuilder(ImmutableMultimap.Builder<Attribute, AttributeModifier> builder) {
+        UUID modifier = ARMOR_MODIFIER_UUID_PER_SLOT[getSlot().getIndex()];
+        builder.put(Attributes.ARMOR, new AttributeModifier(modifier, "Armor modifier", getDefense(), Operation.ADDITION));
+        builder.put(Attributes.ARMOR_TOUGHNESS, new AttributeModifier(modifier, "Armor toughness", getToughness(), Operation.ADDITION));
+        builder.put(Attributes.KNOCKBACK_RESISTANCE, new AttributeModifier(modifier, "Armor knockback resistance", getMaterial().getKnockbackResistance(),
+              Operation.ADDITION));
+    }
+
+    @Override
+    public int getDefense() {
+        return getMaterial().getDefenseForSlot(getSlot());
+    }
+
+    @Override
+    public float getToughness() {
+        return getMaterial().getToughness();
+    }
+
+    public static float getDamageAbsorbed(Player player, DamageSource source, float amount) {
+        return getDamageAbsorbed(player, source, amount, null);
+    }
+
+    public static boolean tryAbsorbAll(Player player, DamageSource source, float amount) {
+        List<Runnable> energyUsageCallbacks = new ArrayList<>(4);
+        if (getDamageAbsorbed(player, source, amount, energyUsageCallbacks) >= 1) {
+            //If we can fully absorb it, actually use the energy from the various pieces and then return that we absorbed it all
+            for (Runnable energyUsageCallback : energyUsageCallbacks) {
+                energyUsageCallback.run();
+            }
+            return true;
+        }
+        return false;
+    }
+
+    private static float getDamageAbsorbed(Player player, DamageSource source, float amount, @Nullable List<Runnable> energyUseCallbacks) {
+        if (amount <= 0) {
             return 0;
         }
-        IEnergyContainer energyContainer = StorageUtils.getEnergyContainer(stack, 0);
-        if (energyContainer != null && amount > 0) {
-            float toAbsorb = amount * absorption;
-            FloatingLong usage = MekanismConfig.gear.mekaSuitEnergyUsageDamage.get().multiply(toAbsorb);
-            return absorption * energyContainer.extract(usage, Action.EXECUTE, AutomationType.MANUAL).divide(usage).floatValue();
+        float ratioAbsorbed = 0;
+        List<FoundArmorDetails> armorDetails = new ArrayList<>();
+        //Start by looping the armor, allowing modules to absorb damage if they can
+        for (ItemStack stack : player.getArmorSlots()) {
+            if (!stack.isEmpty() && stack.getItem() instanceof ItemMekaSuitArmor armor) {
+                IEnergyContainer energyContainer = StorageUtils.getEnergyContainer(stack, 0);
+                if (energyContainer != null) {
+                    FoundArmorDetails details = new FoundArmorDetails(energyContainer, armor);
+                    armorDetails.add(details);
+                    for (Module<?> module : details.armor.getModules(stack)) {
+                        if (module.isEnabled()) {
+                            ModuleDamageAbsorbInfo damageAbsorbInfo = getModuleDamageAbsorbInfo(module, source);
+                            if (damageAbsorbInfo != null) {
+                                float absorption = damageAbsorbInfo.absorptionRatio().getAsFloat();
+                                ratioAbsorbed += absorbDamage(details.usageInfo, amount, absorption, ratioAbsorbed, damageAbsorbInfo.energyCost());
+                                if (ratioAbsorbed >= 1) {
+                                    //If we have fully absorbed the damage, stop checking/trying to absorb more
+                                    break;
+                                }
+                            }
+                        }
+                    }
+                    if (ratioAbsorbed >= 1) {
+                        //If we have fully absorbed the damage, stop checking/trying to absorb more
+                        break;
+                    }
+                }
+            }
+        }
+        if (ratioAbsorbed < 1) {
+            //If we haven't fully absorbed it check the individual pieces of armor for if they can absorb any
+            FloatSupplier absorbRatio = null;
+            for (FoundArmorDetails details : armorDetails) {
+                if (absorbRatio == null) {
+                    //If we haven't looked up yet if we can absorb the damage type and if we can't
+                    // stop checking if the armor is able to
+                    if (!ALWAYS_SUPPORTED_SOURCES.contains(source) && source.isBypassArmor()) {
+                        break;
+                    }
+                    // Next lookup the ratio at which we can absorb the given damage type from the config
+                    absorbRatio = MekanismConfig.gear.mekaSuitDamageRatios.getOrDefault(source, MekanismConfig.gear.mekaSuitUnspecifiedDamageRatio);
+                    if (absorbRatio.getAsFloat() == 0) {
+                        //If the config specifies that the damage type shouldn't be blocked at all
+                        // stop checking if the armor is able to
+                        break;
+                    }
+                }
+                float absorption = details.armor.absorption * absorbRatio.getAsFloat();
+                ratioAbsorbed += absorbDamage(details.usageInfo, amount, absorption, ratioAbsorbed, MekanismConfig.gear.mekaSuitEnergyUsageDamage);
+                if (ratioAbsorbed >= 1) {
+                    //If we have fully absorbed the damage, stop checking/trying to absorb more
+                    break;
+                }
+            }
+        }
+        for (FoundArmorDetails details : armorDetails) {
+            //Use energy/or enqueue usage for each piece as needed
+            if (!details.usageInfo.energyUsed.isZero()) {
+                if (energyUseCallbacks == null) {
+                    details.energyContainer.extract(details.usageInfo.energyUsed, Action.EXECUTE, AutomationType.MANUAL);
+                } else {
+                    energyUseCallbacks.add(() -> details.energyContainer.extract(details.usageInfo.energyUsed, Action.EXECUTE, AutomationType.MANUAL));
+                }
+            }
+        }
+        return Math.min(ratioAbsorbed, 1);
+    }
+
+    @Nullable
+    private static <MODULE extends ICustomModule<MODULE>> ModuleDamageAbsorbInfo getModuleDamageAbsorbInfo(IModule<MODULE> module, DamageSource damageSource) {
+        return module.getCustomInstance().getDamageAbsorbInfo(module, damageSource);
+    }
+
+    private static float absorbDamage(EnergyUsageInfo usageInfo, float amount, float absorption, float currentAbsorbed, FloatingLongSupplier energyCost) {
+        //Cap the amount that we can absorb to how much we have left to absorb
+        absorption = Math.min(1 - currentAbsorbed, absorption);
+        float toAbsorb = amount * absorption;
+        if (toAbsorb > 0) {
+            FloatingLong usage = energyCost.get().multiply(toAbsorb);
+            if (usage.isZero()) {
+                //No energy is actually needed to absorb the damage, either because of the config
+                // or how small the amount to absorb is
+                return absorption;
+            } else if (usageInfo.energyAvailable.greaterOrEqual(usage)) {
+                //If we have more energy available than we need, increase how much energy we "used"
+                // and decrease how much we have available.
+                usageInfo.energyUsed = usageInfo.energyUsed.plusEqual(usage);
+                usageInfo.energyAvailable = usageInfo.energyAvailable.minusEqual(usage);
+                return absorption;
+            } else if (!usageInfo.energyAvailable.isZero()) {
+                //Otherwise, if we have energy available but not as much as needed to fully absorb it
+                // then we calculate what ratio we are able to block
+                float absorbedPercent = usageInfo.energyAvailable.divide(usage).floatValue();
+                usageInfo.energyUsed = usageInfo.energyUsed.plusEqual(usageInfo.energyAvailable);
+                usageInfo.energyAvailable = FloatingLong.ZERO;
+                return absorption * absorbedPercent;
+            }
         }
         return 0;
     }
 
-    @Override
-    public boolean isBookEnchantable(ItemStack stack, ItemStack book) {
-        return material.getEnchantability() > 0;
-    }
+    private static class FoundArmorDetails {
 
-    public List<HUDElement> getHUDElements(ItemStack stack) {
-        List<HUDElement> ret = new ArrayList<>();
-        for (Module module : Modules.loadAll(stack)) {
-            if (module.renderHUD()) {
-                module.addHUDElements(ret);
-            }
+        private final IEnergyContainer energyContainer;
+        private final EnergyUsageInfo usageInfo;
+        private final ItemMekaSuitArmor armor;
+
+        public FoundArmorDetails(IEnergyContainer energyContainer, ItemMekaSuitArmor armor) {
+            this.energyContainer = energyContainer;
+            this.usageInfo = new EnergyUsageInfo(energyContainer.getEnergy());
+            this.armor = armor;
         }
-        return ret;
     }
 
-    // This is unused for the most part; toughness / damage reduction is handled manually
+    private static class EnergyUsageInfo {
+
+        private FloatingLong energyAvailable;
+        private FloatingLong energyUsed = FloatingLong.ZERO;
+
+        public EnergyUsageInfo(FloatingLong energyAvailable) {
+            //Copy it so we can just use minusEquals without worry
+            this.energyAvailable = energyAvailable.copy();
+        }
+    }
+
+    // This is unused for the most part; toughness / damage reduction is handled manually, though it can fall back to netherite values
     protected static class MekaSuitMaterial extends BaseSpecialArmorMaterial {
 
         @Override
-        public int getDamageReductionAmount(@Nonnull EquipmentSlotType slotType) {
-            return 0;
+        public int getDefenseForSlot(@NotNull EquipmentSlot slot) {
+            return switch (slot) {
+                case FEET -> MekanismConfig.gear.mekaSuitBootsArmor.getOrDefault();
+                case LEGS -> MekanismConfig.gear.mekaSuitPantsArmor.getOrDefault();
+                case CHEST -> MekanismConfig.gear.mekaSuitBodyArmorArmor.getOrDefault();
+                case HEAD -> MekanismConfig.gear.mekaSuitHelmetArmor.getOrDefault();
+                default -> 0;
+            };
         }
 
         @Override
         public float getToughness() {
-            return 0;
+            return MekanismConfig.gear.mekaSuitToughness.getOrDefault();
         }
 
         @Override
         public float getKnockbackResistance() {
-            return 0.1F; // knockback armor resistance
+            return MekanismConfig.gear.mekaSuitKnockbackResistance.getOrDefault();
         }
 
-        @Nonnull
+        @NotNull
         @Override
         public String getName() {
             return Mekanism.MODID + ":mekasuit";
