@@ -1,14 +1,14 @@
 package mekanism.common.tile.component;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumMap;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import java.util.Set;
+import java.util.function.Consumer;
 import mekanism.api.NBTConstants;
 import mekanism.api.RelativeSide;
 import mekanism.api.chemical.gas.IGasTank;
@@ -20,8 +20,9 @@ import mekanism.api.fluid.IExtendedFluidTank;
 import mekanism.api.heat.IHeatCapacitor;
 import mekanism.api.inventory.IInventorySlot;
 import mekanism.common.capabilities.Capabilities;
+import mekanism.common.integration.computer.ComputerException;
+import mekanism.common.integration.computer.annotation.ComputerMethod;
 import mekanism.common.integration.energy.EnergyCompatUtils;
-import mekanism.common.inventory.container.MekanismContainer;
 import mekanism.common.inventory.container.MekanismContainer.ISpecificContainerTracker;
 import mekanism.common.inventory.container.sync.ISyncableData;
 import mekanism.common.inventory.container.sync.SyncableBoolean;
@@ -40,19 +41,21 @@ import mekanism.common.tile.component.config.slot.HeatSlotInfo;
 import mekanism.common.tile.component.config.slot.ISlotInfo;
 import mekanism.common.tile.component.config.slot.InventorySlotInfo;
 import mekanism.common.util.EnumUtils;
-import mekanism.common.util.MekanismUtils;
 import mekanism.common.util.NBTUtils;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.Direction;
+import mekanism.common.util.WorldUtils;
+import net.minecraft.core.Direction;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.Tag;
 import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.util.Constants.NBT;
-import net.minecraftforge.fluids.capability.CapabilityFluidHandler;
-import net.minecraftforge.items.CapabilityItemHandler;
+import net.minecraftforge.common.capabilities.ForgeCapabilities;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 public class TileComponentConfig implements ITileComponent, ISpecificContainerTracker {
 
     public final TileEntityMekanism tile;
     private final Map<TransmissionType, ConfigInfo> configInfo = new EnumMap<>(TransmissionType.class);
+    private final Map<TransmissionType, List<Consumer<Direction>>> configChangeListeners = new EnumMap<>(TransmissionType.class);
     //TODO: See if we can come up with a way of not needing this. The issue is we want this to be sorted, but getting the keySet of configInfo doesn't work for us
     private final List<TransmissionType> transmissionTypes = new ArrayList<>();
 
@@ -64,73 +67,70 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
         tile.addComponent(this);
     }
 
+    public void addConfigChangeListener(TransmissionType transmissionType, Consumer<Direction> listener) {
+        //Note: We set the initial capacity to one as currently the only place that really uses this is ConfigHolders
+        // and each tile should really only have one holder per transmission type, but we have this as a list for
+        // expandability and in case any of the tiles end up needing to make use of this
+        configChangeListeners.computeIfAbsent(transmissionType, type -> new ArrayList<>(1)).add(listener);
+    }
+
     public void sideChanged(TransmissionType transmissionType, RelativeSide side) {
-        //TODO: Instead of getDirection this should use ISideConfiguration#getOrientation
         Direction direction = side.getDirection(tile.getDirection());
-        switch (transmissionType) {
-            case ENERGY:
-                tile.invalidateCapabilities(EnergyCompatUtils.getEnabledEnergyCapabilities(), direction);
-                break;
-            case FLUID:
-                tile.invalidateCapability(CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY, direction);
-                break;
-            case GAS:
-                tile.invalidateCapability(Capabilities.GAS_HANDLER_CAPABILITY, direction);
-                break;
-            case INFUSION:
-                tile.invalidateCapability(Capabilities.INFUSION_HANDLER_CAPABILITY, direction);
-                break;
-            case PIGMENT:
-                tile.invalidateCapability(Capabilities.PIGMENT_HANDLER_CAPABILITY, direction);
-                break;
-            case SLURRY:
-                tile.invalidateCapability(Capabilities.SLURRY_HANDLER_CAPABILITY, direction);
-                break;
-            case ITEM:
-                tile.invalidateCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY, direction);
-                break;
-            case HEAT:
-                tile.invalidateCapability(Capabilities.HEAT_HANDLER_CAPABILITY, direction);
-                break;
-        }
+        sideChangedBasic(transmissionType, direction);
         tile.sendUpdatePacket();
-        tile.markDirty(false);
         //Notify the neighbor on that side our state changed
-        MekanismUtils.notifyNeighborOfChange(tile.getWorld(), direction, tile.getPos());
+        WorldUtils.notifyNeighborOfChange(tile.getLevel(), direction, tile.getBlockPos());
+    }
+
+    private void sideChangedBasic(TransmissionType transmissionType, Direction direction) {
+        switch (transmissionType) {
+            case ENERGY -> tile.invalidateCapabilities(EnergyCompatUtils.getEnabledEnergyCapabilities(), direction);
+            case FLUID -> tile.invalidateCapability(ForgeCapabilities.FLUID_HANDLER, direction);
+            case GAS -> tile.invalidateCapability(Capabilities.GAS_HANDLER, direction);
+            case INFUSION -> tile.invalidateCapability(Capabilities.INFUSION_HANDLER, direction);
+            case PIGMENT -> tile.invalidateCapability(Capabilities.PIGMENT_HANDLER, direction);
+            case SLURRY -> tile.invalidateCapability(Capabilities.SLURRY_HANDLER, direction);
+            case ITEM -> tile.invalidateCapability(ForgeCapabilities.ITEM_HANDLER, direction);
+            case HEAT -> tile.invalidateCapability(Capabilities.HEAT_HANDLER, direction);
+        }
+        tile.markForSave();
+        //And invalidate any "listeners" we may have that the side changed for a specific transmission type
+        for (Consumer<Direction> listener : configChangeListeners.getOrDefault(transmissionType, Collections.emptyList())) {
+            listener.accept(direction);
+        }
     }
 
     private RelativeSide getSide(Direction direction) {
-        //TODO: Instead of getDirection this should use ISideConfiguration#getOrientation
         return RelativeSide.fromDirections(tile.getDirection(), direction);
     }
 
+    @ComputerMethod(nameOverride = "getConfigurableTypes")
     public List<TransmissionType> getTransmissions() {
         return transmissionTypes;
     }
 
     public void addSupported(TransmissionType type) {
         if (!configInfo.containsKey(type)) {
-            //TODO: ISideConfiguration#getOrientation?
             configInfo.put(type, new ConfigInfo(tile::getDirection));
             transmissionTypes.add(type);
         }
     }
 
-    public boolean isCapabilityDisabled(@Nonnull Capability<?> capability, Direction side) {
+    public boolean isCapabilityDisabled(@NotNull Capability<?> capability, Direction side) {
         TransmissionType type = null;
-        if (capability == CapabilityItemHandler.ITEM_HANDLER_CAPABILITY) {
+        if (capability == ForgeCapabilities.ITEM_HANDLER) {
             type = TransmissionType.ITEM;
-        } else if (capability == Capabilities.GAS_HANDLER_CAPABILITY) {
+        } else if (capability == Capabilities.GAS_HANDLER) {
             type = TransmissionType.GAS;
-        } else if (capability == Capabilities.INFUSION_HANDLER_CAPABILITY) {
+        } else if (capability == Capabilities.INFUSION_HANDLER) {
             type = TransmissionType.INFUSION;
-        } else if (capability == Capabilities.PIGMENT_HANDLER_CAPABILITY) {
+        } else if (capability == Capabilities.PIGMENT_HANDLER) {
             type = TransmissionType.PIGMENT;
-        } else if (capability == Capabilities.SLURRY_HANDLER_CAPABILITY) {
+        } else if (capability == Capabilities.SLURRY_HANDLER) {
             type = TransmissionType.SLURRY;
-        } else if (capability == Capabilities.HEAT_HANDLER_CAPABILITY) {
+        } else if (capability == Capabilities.HEAT_HANDLER) {
             type = TransmissionType.HEAT;
-        } else if (capability == CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY) {
+        } else if (capability == ForgeCapabilities.FLUID_HANDLER) {
             type = TransmissionType.FLUID;
         } else if (EnergyCompatUtils.isEnergyCapability(capability)) {
             type = TransmissionType.ENERGY;
@@ -138,7 +138,7 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
         if (type != null) {
             ConfigInfo info = getConfig(type);
             if (info != null && side != null) {
-                //If we support this config type and we have a side so are not the read only "internal" check
+                //If we support this config type, and we have a side so are not the read only "internal" check
                 ISlotInfo slotInfo = info.getSlotInfo(getSide(side));
                 //Return that it is disabled:
                 // If we don't know how to handle the data type that is on that side config (such as for NONE)
@@ -152,6 +152,12 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
     @Nullable
     public ConfigInfo getConfig(TransmissionType type) {
         return configInfo.get(type);
+    }
+
+    public void addDisabledSides(@NotNull RelativeSide... sides) {
+        for (ConfigInfo config : configInfo.values()) {
+            config.addDisabledSides(sides);
+        }
     }
 
     public ConfigInfo setupInputConfig(TransmissionType type, Object container) {
@@ -179,15 +185,36 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
     }
 
     public ConfigInfo setupIOConfig(TransmissionType type, Object inputContainer, Object outputContainer, RelativeSide outputSide, boolean alwaysAllow) {
-        ConfigInfo gasConfig = getConfig(type);
-        if (gasConfig != null) {
-            gasConfig.addSlotInfo(DataType.INPUT, createInfo(type, true, alwaysAllow, inputContainer));
-            gasConfig.addSlotInfo(DataType.OUTPUT, createInfo(type, alwaysAllow, true, outputContainer));
-            gasConfig.addSlotInfo(DataType.INPUT_OUTPUT, createInfo(type, true, true, Arrays.asList(inputContainer, outputContainer)));
-            gasConfig.fill(DataType.INPUT);
-            gasConfig.setDataType(DataType.OUTPUT, outputSide);
+        return setupIOConfig(type, inputContainer, outputContainer, outputSide, alwaysAllow, alwaysAllow);
+    }
+
+    public ConfigInfo setupIOConfig(TransmissionType type, Object inputContainer, Object outputContainer, RelativeSide outputSide, boolean alwaysAllowInput,
+          boolean alwaysAllowOutput) {
+        ConfigInfo config = getConfig(type);
+        if (config != null) {
+            config.addSlotInfo(DataType.INPUT, createInfo(type, true, alwaysAllowOutput, inputContainer));
+            config.addSlotInfo(DataType.OUTPUT, createInfo(type, alwaysAllowInput, true, outputContainer));
+            config.addSlotInfo(DataType.INPUT_OUTPUT, createInfo(type, true, true, List.of(inputContainer, outputContainer)));
+            config.fill(DataType.INPUT);
+            config.setDataType(DataType.OUTPUT, outputSide);
         }
-        return gasConfig;
+        return config;
+    }
+
+    public ConfigInfo setupIOConfig(TransmissionType type, Object info, RelativeSide outputSide) {
+        return setupIOConfig(type, info, outputSide, false);
+    }
+
+    public ConfigInfo setupIOConfig(TransmissionType type, Object info, RelativeSide outputSide, boolean alwaysAllow) {
+        ConfigInfo config = getConfig(type);
+        if (config != null) {
+            config.addSlotInfo(DataType.INPUT, createInfo(type, true, alwaysAllow, info));
+            config.addSlotInfo(DataType.OUTPUT, createInfo(type, alwaysAllow, true, info));
+            config.addSlotInfo(DataType.INPUT_OUTPUT, createInfo(type, true, true, info));
+            config.fill(DataType.INPUT);
+            config.setDataType(DataType.OUTPUT, outputSide);
+        }
+        return config;
     }
 
     public ConfigInfo setupItemIOConfig(IInventorySlot inputSlot, IInventorySlot outputSlot, IInventorySlot energySlot) {
@@ -250,35 +277,39 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
     }
 
     @Override
-    public void tick() {
-    }
-
-    @Override
-    public void read(CompoundNBT nbtTags) {
-        if (nbtTags.contains(NBTConstants.COMPONENT_CONFIG, NBT.TAG_COMPOUND)) {
-            CompoundNBT configNBT = nbtTags.getCompound(NBTConstants.COMPONENT_CONFIG);
-            for (Entry<TransmissionType, ConfigInfo> entry : configInfo.entrySet()) {
-                TransmissionType type = entry.getKey();
-                ConfigInfo info = entry.getValue();
+    public void read(CompoundTag nbtTags) {
+        NBTUtils.setCompoundIfPresent(nbtTags, NBTConstants.COMPONENT_CONFIG, configNBT -> {
+            Set<Direction> directionsToUpdate = EnumSet.noneOf(Direction.class);
+            configInfo.forEach((type, info) -> {
                 info.setEjecting(configNBT.getBoolean(NBTConstants.EJECT + type.ordinal()));
-                CompoundNBT sideConfig = configNBT.getCompound(NBTConstants.CONFIG + type.ordinal());
+                CompoundTag sideConfig = configNBT.getCompound(NBTConstants.CONFIG + type.ordinal());
                 for (RelativeSide side : EnumUtils.SIDES) {
-                    NBTUtils.setEnumIfPresent(sideConfig, NBTConstants.SIDE + side.ordinal(), DataType::byIndexStatic, dataType -> info.setDataType(dataType, side));
+                    NBTUtils.setEnumIfPresent(sideConfig, NBTConstants.SIDE + side.ordinal(), DataType::byIndexStatic, dataType -> {
+                        if (info.getDataType(side) != dataType) {
+                            info.setDataType(dataType, side);
+                            if (tile.hasLevel()) {//If we aren't already loaded yet don't do any updates
+                                Direction direction = side.getDirection(tile.getDirection());
+                                sideChangedBasic(type, direction);
+                                directionsToUpdate.add(direction);
+                            }
+                        }
+                    });
                 }
-            }
-        }
+            });
+            WorldUtils.notifyNeighborsOfChange(tile.getLevel(), tile.getBlockPos(), directionsToUpdate);
+        });
     }
 
     @Override
-    public void write(CompoundNBT nbtTags) {
-        CompoundNBT configNBT = new CompoundNBT();
+    public void write(CompoundTag nbtTags) {
+        CompoundTag configNBT = new CompoundTag();
         for (Entry<TransmissionType, ConfigInfo> entry : configInfo.entrySet()) {
             TransmissionType type = entry.getKey();
             ConfigInfo info = entry.getValue();
             configNBT.putBoolean(NBTConstants.EJECT + type.ordinal(), info.isEjecting());
-            CompoundNBT sideConfig = new CompoundNBT();
+            CompoundTag sideConfig = new CompoundTag();
             for (RelativeSide side : EnumUtils.SIDES) {
-                sideConfig.putInt(NBTConstants.SIDE + side.ordinal(), info.getDataType(side).ordinal());
+                NBTUtils.writeEnum(sideConfig, NBTConstants.SIDE + side.ordinal(), info.getDataType(side));
             }
             configNBT.put(NBTConstants.CONFIG + type.ordinal(), sideConfig);
         }
@@ -286,19 +317,15 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
     }
 
     @Override
-    public void trackForMainContainer(MekanismContainer container) {
-    }
-
-    @Override
-    public void addToUpdateTag(CompoundNBT updateTag) {
+    public void addToUpdateTag(CompoundTag updateTag) {
         //Note: This is slightly different from read and write as we don't bother syncing the ejecting status
-        CompoundNBT configNBT = new CompoundNBT();
+        CompoundTag configNBT = new CompoundTag();
         for (Entry<TransmissionType, ConfigInfo> entry : configInfo.entrySet()) {
             TransmissionType type = entry.getKey();
             ConfigInfo info = entry.getValue();
-            CompoundNBT sideConfig = new CompoundNBT();
+            CompoundTag sideConfig = new CompoundTag();
             for (RelativeSide side : EnumUtils.SIDES) {
-                sideConfig.putInt(NBTConstants.SIDE + side.ordinal(), info.getDataType(side).ordinal());
+                NBTUtils.writeEnum(sideConfig, NBTConstants.SIDE + side.ordinal(), info.getDataType(side));
             }
             configNBT.put(NBTConstants.CONFIG + type.ordinal(), sideConfig);
         }
@@ -306,13 +333,13 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
     }
 
     @Override
-    public void readFromUpdateTag(CompoundNBT updateTag) {
-        if (updateTag.contains(NBTConstants.COMPONENT_CONFIG, NBT.TAG_COMPOUND)) {
-            CompoundNBT configNBT = updateTag.getCompound(NBTConstants.COMPONENT_CONFIG);
+    public void readFromUpdateTag(CompoundTag updateTag) {
+        if (updateTag.contains(NBTConstants.COMPONENT_CONFIG, Tag.TAG_COMPOUND)) {
+            CompoundTag configNBT = updateTag.getCompound(NBTConstants.COMPONENT_CONFIG);
             for (Entry<TransmissionType, ConfigInfo> entry : configInfo.entrySet()) {
                 TransmissionType type = entry.getKey();
                 ConfigInfo info = entry.getValue();
-                CompoundNBT sideConfig = configNBT.getCompound(NBTConstants.CONFIG + type.ordinal());
+                CompoundTag sideConfig = configNBT.getCompound(NBTConstants.CONFIG + type.ordinal());
                 for (RelativeSide side : EnumUtils.SIDES) {
                     NBTUtils.setEnumIfPresent(sideConfig, NBTConstants.SIDE + side.ordinal(), DataType::byIndexStatic, dataType -> info.setDataType(dataType, side));
                 }
@@ -332,29 +359,101 @@ public class TileComponentConfig implements ITileComponent, ISpecificContainerTr
     }
 
     public static BaseSlotInfo createInfo(TransmissionType type, boolean input, boolean output, Object... containers) {
-        return createInfo(type, input, output, Arrays.asList(containers));
+        return createInfo(type, input, output, List.of(containers));
     }
 
     @SuppressWarnings("unchecked")
     public static BaseSlotInfo createInfo(TransmissionType type, boolean input, boolean output, List<?> containers) {
-        switch (type) {
-            case ITEM:
-                return new InventorySlotInfo(input, output, (List<IInventorySlot>) containers);
-            case FLUID:
-                return new FluidSlotInfo(input, output, (List<IExtendedFluidTank>) containers);
-            case GAS:
-                return new GasSlotInfo(input, output, (List<IGasTank>) containers);
-            case INFUSION:
-                return new InfusionSlotInfo(input, output, (List<IInfusionTank>) containers);
-            case PIGMENT:
-                return new PigmentSlotInfo(input, output, (List<IPigmentTank>) containers);
-            case SLURRY:
-                return new SlurrySlotInfo(input, output, (List<ISlurryTank>) containers);
-            case ENERGY:
-                return new EnergySlotInfo(input, output, (List<IEnergyContainer>) containers);
-            case HEAT:
-                return new HeatSlotInfo(input, output, (List<IHeatCapacitor>) containers);
-        }
-        return null;
+        return switch (type) {
+            case ITEM -> new InventorySlotInfo(input, output, (List<IInventorySlot>) containers);
+            case FLUID -> new FluidSlotInfo(input, output, (List<IExtendedFluidTank>) containers);
+            case GAS -> new GasSlotInfo(input, output, (List<IGasTank>) containers);
+            case INFUSION -> new InfusionSlotInfo(input, output, (List<IInfusionTank>) containers);
+            case PIGMENT -> new PigmentSlotInfo(input, output, (List<IPigmentTank>) containers);
+            case SLURRY -> new SlurrySlotInfo(input, output, (List<ISlurryTank>) containers);
+            case ENERGY -> new EnergySlotInfo(input, output, (List<IEnergyContainer>) containers);
+            case HEAT -> new HeatSlotInfo(input, output, (List<IHeatCapacitor>) containers);
+        };
     }
+
+    //Computer related methods
+    private void validateSupportedTransmissionType(TransmissionType type) throws ComputerException {
+        if (!supports(type)) {
+            throw new ComputerException("This machine does not support configuring transmission type '%s'.", type);
+        }
+    }
+
+    @ComputerMethod
+    private boolean canEject(TransmissionType type) throws ComputerException {
+        validateSupportedTransmissionType(type);
+        return configInfo.get(type).canEject();
+    }
+
+    @ComputerMethod
+    private boolean isEjecting(TransmissionType type) throws ComputerException {
+        validateSupportedTransmissionType(type);
+        return configInfo.get(type).isEjecting();
+    }
+
+    @ComputerMethod
+    private void setEjecting(TransmissionType type, boolean ejecting) throws ComputerException {
+        tile.validateSecurityIsPublic();
+        validateSupportedTransmissionType(type);
+        ConfigInfo config = configInfo.get(type);
+        if (!config.canEject()) {
+            throw new ComputerException("This machine does not support auto-ejecting for transmission type '%s'.", type);
+        }
+        if (config.isEjecting() != ejecting) {
+            config.setEjecting(ejecting);
+            tile.markForSave();
+        }
+    }
+
+    @ComputerMethod
+    private Set<DataType> getSupportedModes(TransmissionType type) throws ComputerException {
+        validateSupportedTransmissionType(type);
+        return configInfo.get(type).getSupportedDataTypes();
+    }
+
+    @ComputerMethod
+    private DataType getMode(TransmissionType type, RelativeSide side) throws ComputerException {
+        validateSupportedTransmissionType(type);
+        return configInfo.get(type).getDataType(side);
+    }
+
+    @ComputerMethod
+    private void setMode(TransmissionType type, RelativeSide side, DataType mode) throws ComputerException {
+        tile.validateSecurityIsPublic();
+        validateSupportedTransmissionType(type);
+        ConfigInfo config = configInfo.get(type);
+        if (!config.getSupportedDataTypes().contains(mode)) {
+            throw new ComputerException("This machine does not support mode '%s' for transmission type '%s'.", mode, type);
+        }
+        DataType currentMode = config.getDataType(side);
+        if (mode != currentMode) {
+            config.setDataType(mode, side);
+            sideChanged(type, side);
+        }
+    }
+
+    @ComputerMethod
+    private void incrementMode(TransmissionType type, RelativeSide side) throws ComputerException {
+        tile.validateSecurityIsPublic();
+        validateSupportedTransmissionType(type);
+        ConfigInfo configInfo = this.configInfo.get(type);
+        if (configInfo.getDataType(side) != configInfo.incrementDataType(side)) {
+            sideChanged(type, side);
+        }
+    }
+
+    @ComputerMethod
+    private void decrementMode(TransmissionType type, RelativeSide side) throws ComputerException {
+        tile.validateSecurityIsPublic();
+        validateSupportedTransmissionType(type);
+        ConfigInfo configInfo = this.configInfo.get(type);
+        if (configInfo.getDataType(side) != configInfo.decrementDataType(side)) {
+            sideChanged(type, side);
+        }
+    }
+    //End computer related methods
 }
